--- a/new_vpay_api/application/index/view/wallet/liutong.html
+++ b/new_vpay_api/application/index/view/wallet/liutong.html
@@ -4,8 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <title></title>
-    <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
-    <link href="__static__/css/mui.min.css" rel="stylesheet" />
+    <meta name="viewport"
+          content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no"/>
+    <link href="__static__/css/mui.min.css" rel="stylesheet"/>
     <!--<script type="text/javascript" src="__static__/js/back_icon.js" ></script>-->
     <style>
         .table {
@@ -15,21 +16,24 @@
             color: #000000;
             text-align: center;
         }
+
         .table td,
         .table th {
             border-bottom: 1px solid #d8d8d8;
             padding: 0 1em 0;
             width: 33%;
         }
-        .table tr{
-            height:40px;
+
+        .table tr {
+            height: 40px;
         }
     </style>
 </head>
 
 <body>
 <header class="mui-bar mui-bar-nav" style="background-color: #fec900;color: #000000;">
-    <i class="mui-icon mui-icon-left-nav mui-pull-left"  onclick="window.location.href='{:url('index/index/index?taba='.$taba)}'"></i>
+    <i class="mui-icon mui-icon-left-nav mui-pull-left"
+       onclick="window.location.href='{:url('index/index/index?taba='.$taba)}'"></i>
     <h1 class="mui-title">流通明细</h1>
 </header>
 <div class="mui-content">
@@ -61,14 +65,15 @@
     mui.init();
     var tab = getQueryString('taba');
 
-    function back(){
-        window.location.href="{:url('index/index/index?taba=')}";
+    function back() {
+        window.location.href = "{:url('index/index/index?taba=')}";
     }
 
     function getQueryString(name) {
         var reg = new RegExp("(^|&)" + name + "=([^&]*)(&|$)", "i");
         var r = window.location.search.substr(1).match(reg);
-        if (r != null) return unescape(r[2]); return null;
+        if (r != null) return unescape(r[2]);
+        return null;
     }
 </script>
 </body>
