--- a/new_vpay_api/application/index/view/wallet/zichan.html
+++ b/new_vpay_api/application/index/view/wallet/zichan.html
@@ -4,9 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <title></title>
-    <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
-    <link href="__static__/css/mui.min.css" rel="stylesheet" />
-    <script type="text/javascript" src="__static__/js/back_icon.js" ></script>
+    <meta name="viewport"
+          content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no"/>
+    <link href="__static__/css/mui.min.css" rel="stylesheet"/>
+    <script type="text/javascript" src="__static__/js/back_icon.js"></script>
     <style>
         .table {
             margin-top: 8px;
@@ -15,21 +16,24 @@
             color: #000000;
             text-align: center;
         }
+
         .table td,
         .table th {
             border-bottom: 1px solid #d8d8d8;
             padding: 0 1em 0;
             width: 33%;
         }
-        .table tr{
-            height:40px;
+
+        .table tr {
+            height: 40px;
         }
     </style>
 </head>
 
 <body>
 <header class="mui-bar mui-bar-nav" style="background-color: #fec900;color: #000000;">
-    <i class="mui-icon mui-icon-left-nav mui-pull-left"  onclick="window.location.href='{:url('index/index/index?taba='.$taba)}'"></i>
+    <i class="mui-icon mui-icon-left-nav mui-pull-left"
+       onclick="window.location.href='{:url('index/index/index?taba='.$taba)}'"></i>
     <h1 class="mui-title">资产明细</h1>
 </header>
 <div class="mui-content">
@@ -63,8 +67,8 @@
     mui.init();
 
 
-    mui.plusReady(function() {
-        plus.key.addEventListener('backbutton', function() {
+    mui.plusReady(function () {
+        plus.key.addEventListener('backbutton', function () {
             window.history.go(-1);
         }, false);
 
