--- a/mubei_admin/application/index/view/index/look_html.html
+++ b/mubei_admin/application/index/view/index/look_html.html
@@ -1,24 +1,27 @@
 <!DOCTYPE html>
 
-<!--[if IE 8]> <html lang="en" class="ie8 no-js"> <![endif]-->
+<!--[if IE 8]>
+<html lang="en" class="ie8 no-js"> <![endif]-->
 
-<!--[if IE 9]> <html lang="en" class="ie9 no-js"> <![endif]-->
+<!--[if IE 9]>
+<html lang="en" class="ie9 no-js"> <![endif]-->
 
-<!--[if !IE]><!--> <html lang="en" class="no-js"> <!--<![endif]-->
+<!--[if !IE]><!-->
+<html lang="en" class="no-js"> <!--<![endif]-->
 
 <!-- BEGIN HEAD -->
 
 <head>
 
-    <meta charset="utf-8" />
+    <meta charset="utf-8"/>
 
     <title>会员管理</title>
 
-    <meta content="width=device-width, initial-scale=1.0" name="viewport" />
+    <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
 
-    <meta content="" name="description" />
+    <meta content="" name="description"/>
 
-    <meta content="" name="author" />
+    <meta content="" name="author"/>
 
     <!-- BEGIN GLOBAL MANDATORY STYLES -->
 
@@ -44,7 +47,7 @@
 
     <link href="__static__/media/css/jquery.gritter.css" rel="stylesheet" type="text/css"/>
 
-    <link href="__static__/media/css/daterangepicker.css" rel="stylesheet" type="text/css" />
+    <link href="__static__/media/css/daterangepicker.css" rel="stylesheet" type="text/css"/>
 
     <link href="__static__/media/css/fullcalendar.css" rel="stylesheet" type="text/css"/>
 
@@ -54,7 +57,7 @@
 
     <!-- END PAGE LEVEL STYLES -->
 
-    <link rel="shortcut icon" href="__static__/media/image/favicon.ico" />
+    <link rel="shortcut icon" href="__static__/media/image/favicon.ico"/>
 
 </head>
 
@@ -108,9 +111,13 @@
                 <td data-title="手机号码" class="numeric"><?php echo $v['tel']?></td>
                 <td data-title="资产" class="numeric"><?php echo $v['balance']?></td>
                 <td data-title="积分" class="numeric"><?php echo $v['assets']?></td>
-                <td data-title="最上级会员" class="numeric"><?php if($v['best_uid'] == 0){ echo '初级会员'; }else{ echo $v['best_uid'];}?></td>
-                <td data-title="上级会员" class="numeric"><?php if($v['f_uid'] == 0){ echo '初级会员'; }else{ echo $v['f_uid'];}?></td>
-                <td data-title="会员代级" class="numeric"><?php if($v['era'] == 0){ echo '初'; }else{ echo '第'.$v['era'];}?>代</td>
+                <td data-title="最上级会员"
+                    class="numeric"><?php if($v['best_uid'] == 0){ echo '初级会员'; }else{ echo $v['best_uid'];}?></td>
+                <td data-title="上级会员"
+                    class="numeric"><?php if($v['f_uid'] == 0){ echo '初级会员'; }else{ echo $v['f_uid'];}?></td>
+                <td data-title="会员代级" class="numeric"><?php if($v['era'] == 0){ echo '初'; }else{ echo '第'.$v['era'];}?>
+                    代
+                </td>
                 <td data-title="是否为VIP会员" class="numeric"><?php echo $v['vip_static']==1? '是':'否'?></td>
                 <!--<td data-title="会员等级" class="numeric">M<?php echo $v['level'] ?></td>-->
                 <td data-title="注册时间" class="numeric"><?php echo date('Y-m-d H:i:s', $v['time']) ?></td>
@@ -126,14 +133,9 @@
 </div>
 
 
-
-
-
-
-
 <script>
 
-    jQuery(document).ready(function() {
+    jQuery(document).ready(function () {
 
         App.init(); // initlayout and core plugins
 
@@ -154,7 +156,6 @@
         Index.initIntro();
 
     });
-
 
 
     function admin_add(title, url, w, h) {
