--- a/mubei_admin/application/index/view/index/welcome.html
+++ b/mubei_admin/application/index/view/index/welcome.html
@@ -1,24 +1,27 @@
 ﻿<!DOCTYPE html>
 
-<!--[if IE 8]> <html lang="en" class="ie8 no-js"> <![endif]-->
+<!--[if IE 8]>
+<html lang="en" class="ie8 no-js"> <![endif]-->
 
-<!--[if IE 9]> <html lang="en" class="ie9 no-js"> <![endif]-->
+<!--[if IE 9]>
+<html lang="en" class="ie9 no-js"> <![endif]-->
 
-<!--[if !IE]><!--> <html lang="en" class="no-js"> <!--<![endif]-->
+<!--[if !IE]><!-->
+<html lang="en" class="no-js"> <!--<![endif]-->
 
 <!-- BEGIN HEAD -->
 
 <head>
 
-    <meta charset="utf-8" />
+    <meta charset="utf-8"/>
 
     <title>会员管理</title>
 
-    <meta content="width=device-width, initial-scale=1.0" name="viewport" />
+    <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
 
-    <meta content="" name="description" />
+    <meta content="" name="description"/>
 
-    <meta content="" name="author" />
+    <meta content="" name="author"/>
 
     <!-- BEGIN GLOBAL MANDATORY STYLES -->
 
@@ -44,7 +47,7 @@
 
     <link href="__static__/media/css/jquery.gritter.css" rel="stylesheet" type="text/css"/>
 
-    <link href="__static__/media/css/daterangepicker.css" rel="stylesheet" type="text/css" />
+    <link href="__static__/media/css/daterangepicker.css" rel="stylesheet" type="text/css"/>
 
     <link href="__static__/media/css/fullcalendar.css" rel="stylesheet" type="text/css"/>
 
@@ -54,7 +57,7 @@
 
     <!-- END PAGE LEVEL STYLES -->
 
-    <link rel="shortcut icon" href="__static__/media/image/favicon.ico" />
+    <link rel="shortcut icon" href="__static__/media/image/favicon.ico"/>
 
 </head>
 
@@ -66,7 +69,7 @@
 
 <!-- BEGIN HEADER -->
 
-{include file="common/common"  /}
+{include file="common/common" /}
 
 <!-- END SIDEBAR -->
 
@@ -204,30 +207,25 @@
         <!-- END PAGE HEADER-->
 
 
+        <!-- END DASHBOARD STATS -->
 
 
-            <!-- END DASHBOARD STATS -->
+        <div style="width: 100%;height: 600px;"></div>
 
-
-            <div style="width: 100%;height: 600px;"></div>
-
-        </div>
-
-
-
-        <!--<div style="height: 200px;width: 100%;"></div>-->
     </div>
 
-    <!-- END PAGE CONTAINER-->
+
+    <!--<div style="height: 200px;width: 100%;"></div>-->
+</div>
+
+<!-- END PAGE CONTAINER-->
 
 </div>
 
 <!-- END PAGE -->
 
 
-
 <!-- END CONTAINER -->
-
 
 
 <!-- BEGIN FOOTER -->
@@ -236,7 +234,8 @@
 
     <div class="footer-inner">
 
-        2018 &copy; Metronic by keenthemes.Collect from <a href="" title="" target="_blank"></a> - More Templates <a href="" target="_blank" title=""></a>
+        2018 &copy; Metronic by keenthemes.Collect from <a href="" title="" target="_blank"></a> - More Templates <a
+            href="" target="_blank" title=""></a>
 
     </div>
 
@@ -282,7 +281,7 @@
 
 <script src="__static__/media/js/jquery.cookie.min.js" type="text/javascript"></script>
 
-<script src="__static__/media/js/jquery.uniform.min.js" type="text/javascript" ></script>
+<script src="__static__/media/js/jquery.uniform.min.js" type="text/javascript"></script>
 
 <!-- END CORE PLUGINS -->
 
