--- a/mubei_admin/application/index/view/menu/add_card.html
+++ b/mubei_admin/application/index/view/menu/add_card.html
@@ -1,24 +1,27 @@
 <!DOCTYPE html>
 
-<!--[if IE 8]> <html lang="en" class="ie8 no-js"> <![endif]-->
+<!--[if IE 8]>
+<html lang="en" class="ie8 no-js"> <![endif]-->
 
-<!--[if IE 9]> <html lang="en" class="ie9 no-js"> <![endif]-->
+<!--[if IE 9]>
+<html lang="en" class="ie9 no-js"> <![endif]-->
 
-<!--[if !IE]><!--> <html lang="en" class="no-js"> <!--<![endif]-->
+<!--[if !IE]><!-->
+<html lang="en" class="no-js"> <!--<![endif]-->
 
 <!-- BEGIN HEAD -->
 
 <head>
 
-    <meta charset="utf-8" />
+    <meta charset="utf-8"/>
 
     <title>添加银行</title>
 
-    <meta content="width=device-width, initial-scale=1.0" name="viewport" />
+    <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
 
-    <meta content="" name="description" />
+    <meta content="" name="description"/>
 
-    <meta content="" name="author" />
+    <meta content="" name="author"/>
     <link rel="stylesheet" type="text/css" href="__static__/hui/static/h-ui/css/H-ui.min.css"/>
     <!-- BEGIN GLOBAL MANDATORY STYLES -->
 
@@ -45,7 +48,7 @@
 
     <link href="__static__/media/css/jquery.gritter.css" rel="stylesheet" type="text/css"/>
 
-    <link href="__static__/media/css/daterangepicker.css" rel="stylesheet" type="text/css" />
+    <link href="__static__/media/css/daterangepicker.css" rel="stylesheet" type="text/css"/>
 
     <link href="__static__/media/css/fullcalendar.css" rel="stylesheet" type="text/css"/>
 
@@ -55,10 +58,21 @@
 
     <!-- END PAGE LEVEL STYLES -->
 
-    <link rel="shortcut icon" href="__static__/media/image/favicon.ico" />
+    <link rel="shortcut icon" href="__static__/media/image/favicon.ico"/>
 
     <style>
-        #overlay {  background: #000;  display: none;  filter: alpha(opacity=50); /* IE的透明度 */  opacity: 0.5;  /* 透明度 */  position: absolute;  top: 0;  left: 0;  width: 100%;  height: 100%;  z-index: 100; /* 此处的图层要大于页面 */  }
+        #overlay {
+            background: #000;
+            display: none;
+            filter: alpha(opacity=50); /* IE的透明度 */
+            opacity: 0.5; /* 透明度 */
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            z-index: 100; /* 此处的图层要大于页面 */
+        }
 
     </style>
 </head>
@@ -70,7 +84,7 @@
 <body class="page-header-fixed" style="padding-bottom: 5%;">
 
 <!-- BEGIN HEADER -->
-{include file="common/common"  /}
+{include file="common/common" /}
 
 <!-- END SIDEBAR -->
 
@@ -235,7 +249,6 @@
             <!-- BEGIN DASHBOARD STATS -->
 
 
-
             <!-- END DASHBOARD STATS -->
 
             <div class="clearfix"></div>
@@ -246,7 +259,8 @@
                 <div class="row cl">
                     <label class="form-label col-xs-4 col-sm-3">银行名：</label>
                     <div class="formControls col-xs-8 col-sm-9">
-                        <input type="text" class="input-text" value="" placeholder="" id="title" name="title" style="width: 50%;">
+                        <input type="text" class="input-text" value="" placeholder="" id="title" name="title"
+                               style="width: 50%;">
                     </div>
                 </div>
                 <div class="row cl">
@@ -289,10 +303,10 @@
 
                         <thead class="cf">
 
-                        <tr  style="text-align: center">
-                            <th  style="text-align: center">银行名</th>
+                        <tr style="text-align: center">
+                            <th style="text-align: center">银行名</th>
                             <?php if($admin['type'] != 2){ ?>
-                            <th  style="text-align: center" class="numeric">操作</th>
+                            <th style="text-align: center" class="numeric">操作</th>
                             <?php }?>
                         </tr>
                         </thead>
@@ -302,8 +316,12 @@
                             <td data-title="银行名"><?php echo $vo['bn_name']?></td>
                             <?php if($admin['type'] != 2){ ?>
                             <td data-title="操作" class="numeric">
-                                <button type="button" class="btn red" onclick="delete_n(<?php echo $vo['bn_id']?>)">删除</button>
-                                <button onclick="admin_add('修改银行','{:url('index/user/add_card_p3?nid='.$vo['bn_id'])}','400','400')" type="button" class="btn blue">修改</button></td>
+                                <button type="button" class="btn red" onclick="delete_n(<?php echo $vo['bn_id']?>)">删除
+                                </button>
+                                <button onclick="admin_add('修改银行','{:url('index/user/add_card_p3?nid='.$vo['bn_id'])}','400','400')"
+                                        type="button" class="btn blue">修改
+                                </button>
+                            </td>
                             <?php }?>
                         </tr>
                         <?php } ?>
@@ -317,7 +335,8 @@
             <div style="width: 100%;height: 400px;"></div>
 
 
-            <div id="myModal1" class="modal hide fade in" tabindex="-1" role="dialog" aria-labelledby="myModalLabel1" aria-hidden="false" style="display: none;height: 200px;">
+            <div id="myModal1" class="modal hide fade in" tabindex="-1" role="dialog" aria-labelledby="myModalLabel1"
+                 aria-hidden="false" style="display: none;height: 200px;">
 
                 <div class="modal-header">
 
@@ -346,7 +365,6 @@
         </div>
 
 
-
         <!--<div style="height: 200px;width: 100%;"></div>-->
     </div>
 
@@ -368,7 +386,8 @@
 
     <div class="footer-inner">
 
-        2018 &copy; Metronic by keenthemes.Collect from <a href="" title="" target="_blank"></a> - More Templates <a href="" target="_blank" title=""></a>
+        2018 &copy; Metronic by keenthemes.Collect from <a href="" title="" target="_blank"></a> - More Templates <a
+            href="" target="_blank" title=""></a>
 
     </div>
     <div class="footer-tools">
@@ -413,7 +432,7 @@
 
 <script src="__static__/media/js/jquery.cookie.min.js" type="text/javascript"></script>
 
-<script src="__static__/media/js/jquery.uniform.min.js" type="text/javascript" ></script>
+<script src="__static__/media/js/jquery.uniform.min.js" type="text/javascript"></script>
 
 <!-- END CORE PLUGINS -->
 
@@ -462,7 +481,6 @@
 <!-- END PAGE LEVEL SCRIPTS -->
 
 
-
 <script type="text/javascript" src="__static__/hui/lib/jquery/1.9.1/jquery.min.js"></script>
 <script type="text/javascript" src="__static__/hui/lib/layer/2.4/layer.js"></script>
 <script type="text/javascript" src="__static__/hui/static/h-ui/js/H-ui.min.js"></script>
@@ -471,7 +489,7 @@
 
 <script>
 
-    jQuery(document).ready(function() {
+    jQuery(document).ready(function () {
 
         App.init(); // initlayout and core plugins
 
@@ -494,7 +512,7 @@
     });
 
 
-    function notice_add(){
+    function notice_add() {
         $("#form-admin-add").toggle("fast");
     }
 
@@ -502,30 +520,31 @@
         layer_show(title, url, w, h);
     }
 
-    $('#nonot').click(function(){
+    $('#nonot').click(function () {
         $('#myModal1').toggle("fast");
         hideOverlay();
     });
 
 
-
-    function delete_n(nid){
+    function delete_n(nid) {
         showOverlay();
         $('#myModal1').toggle("fast");
-        $('#yes').click(function(){
+        $('#yes').click(function () {
             $.ajax({
                 type: "post",
                 url: "{:url('index/menu/add_card_p2')}",
                 dataType: "json",
                 data: {
-                    nid:nid
+                    nid: nid
                 },
                 success: function (res) {
-                    if(res.code == 2) {
+                    if (res.code == 2) {
                         alert(res.msg);
                     } else if (res.code == 1) {
                         alert(res.msg);
-                        setTimeout(function(){window.location.reload()},500);
+                        setTimeout(function () {
+                            window.location.reload()
+                        }, 500);
                     }
                 }, fail: function (res) {
                     alert("网络错误");
@@ -559,14 +578,16 @@
             url: "{:url('index/menu/add_card_p1')}",
             dataType: "json",
             data: {
-                title:title
+                title: title
             },
             success: function (res) {
-                if(res.code == 2) {
+                if (res.code == 2) {
                     alert(res.msg);
                 } else if (res.code == 1) {
                     alert(res.msg);
-                    setTimeout(function(){window.location.reload()},500);
+                    setTimeout(function () {
+                        window.location.reload()
+                    }, 500);
                 }
             }, fail: function (res) {
                 alert("网络错误");
