--- a/mubei_admin/application/index/view/menu/beijin.html
+++ b/mubei_admin/application/index/view/menu/beijin.html
@@ -1,24 +1,27 @@
 <!DOCTYPE html>
 
-<!--[if IE 8]> <html lang="en" class="ie8 no-js"> <![endif]-->
+<!--[if IE 8]>
+<html lang="en" class="ie8 no-js"> <![endif]-->
 
-<!--[if IE 9]> <html lang="en" class="ie9 no-js"> <![endif]-->
+<!--[if IE 9]>
+<html lang="en" class="ie9 no-js"> <![endif]-->
 
-<!--[if !IE]><!--> <html lang="en" class="no-js"> <!--<![endif]-->
+<!--[if !IE]><!-->
+<html lang="en" class="no-js"> <!--<![endif]-->
 
 <!-- BEGIN HEAD -->
 
 <head>
 
-    <meta charset="utf-8" />
+    <meta charset="utf-8"/>
 
     <title>轮播图管理</title>
 
-    <meta content="width=device-width, initial-scale=1.0" name="viewport" />
+    <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
 
-    <meta content="" name="description" />
+    <meta content="" name="description"/>
 
-    <meta content="" name="author" />
+    <meta content="" name="author"/>
     <link rel="stylesheet" type="text/css" href="__static__/hui/static/h-ui/css/H-ui.min.css"/>
     <!-- BEGIN GLOBAL MANDATORY STYLES -->
 
@@ -41,12 +44,12 @@
     <!-- END GLO__static__/BAL MANDATORY STYLES -->
 
     <!-- BEGIN P__static__/AGE LEVEL STYLES -->
-    <link rel="stylesheet" type="text/css" href="__static__/media/css/bootstrap-fileupload.css" />
+    <link rel="stylesheet" type="text/css" href="__static__/media/css/bootstrap-fileupload.css"/>
 
 
     <link href="__static__/media/css/jquery.gritter.css" rel="stylesheet" type="text/css"/>
 
-    <link href="__static__/media/css/daterangepicker.css" rel="stylesheet" type="text/css" />
+    <link href="__static__/media/css/daterangepicker.css" rel="stylesheet" type="text/css"/>
 
     <link href="__static__/media/css/fullcalendar.css" rel="stylesheet" type="text/css"/>
 
@@ -54,7 +57,7 @@
 
     <link href="__static__/media/css/jquery.easy-pie-chart.css" rel="stylesheet" type="text/css" media="screen"/>
 
-    <link rel="stylesheet" type="text/css" href="__static__/bianji/styles/simditor.css" />
+    <link rel="stylesheet" type="text/css" href="__static__/bianji/styles/simditor.css"/>
     <script src="http://www.jq22.com/jquery/jquery-1.10.2.js"></script>
     <script type="text/javascript" src="__static__/bianji/scripts/module.min.js"></script>
     <script type="text/javascript" src="__static__/bianji/scripts/hotkeys.min.js"></script>
@@ -63,10 +66,21 @@
     <!-- END PAGE LEVEL STYLES -->
 
     <script type="text/javascript" src="__static__/media/js/bootstrap-fileupload.js"></script>
-    <link rel="shortcut icon" href="__static__/media/image/favicon.ico" />
+    <link rel="shortcut icon" href="__static__/media/image/favicon.ico"/>
 
     <style>
-        #overlay {  background: #000;  display: none;  filter: alpha(opacity=50); /* IE的透明度 */  opacity: 0.5;  /* 透明度 */  position: absolute;  top: 0;  left: 0;  width: 100%;  height: 100%;  z-index: 100; /* 此处的图层要大于页面 */  }
+        #overlay {
+            background: #000;
+            display: none;
+            filter: alpha(opacity=50); /* IE的透明度 */
+            opacity: 0.5; /* 透明度 */
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            z-index: 100; /* 此处的图层要大于页面 */
+        }
 
     </style>
 </head>
@@ -78,7 +92,7 @@
 <body class="page-header-fixed" style="padding-bottom: 5%;">
 
 <!-- BEGIN HEADER -->
-{include file="common/common"  /}
+{include file="common/common" /}
 
 <!-- END SIDEBAR -->
 
@@ -243,7 +257,6 @@
             <!-- BEGIN DASHBOARD STATS -->
 
 
-
             <!-- END DASHBOARD STATS -->
 
             <div class="clearfix"></div>
@@ -294,13 +307,16 @@
                         <?php foreach($order as $vo){ ?>
                         <tr style="text-align: center">
                             <td data-title="图片"><img style="width: 300px;height: 300px;"
-                                    src="<?php echo  '/new_vpay_api/public/static/uploads/'.$vo['bj_img']?>" alt=""/></td>
+                                                     src="<?php echo  '/new_vpay_api/public/static/uploads/'.$vo['bj_img']?>"
+                                                     alt=""/></td>
                             <td data-title="时间" class="numeric"><?php echo date('Y-m-d H:i:s', $vo['time']) ?></td>
                             <?php if($admin['type'] != 2){ ?>
                             <td data-title="操作" class="numeric">
                                 <input type="hidden" value="<?php echo $vo['bj_img']?>" id="imag"/>
                                 <button onclick="admin_add('修改公告','{:url('index/user/change_beijin?nid='.$vo['bj_id'])}','400','400')"
-                                        type="button" class="btn blue">修改</button></td>
+                                        type="button" class="btn blue">修改
+                                </button>
+                            </td>
                             <?php }?>
                         </tr>
                         <?php } ?>
@@ -315,7 +331,8 @@
             <div style="width: 100%;height: 400px;"></div>
 
 
-            <div id="myModal1" class="modal hide fade in" tabindex="-1" role="dialog" aria-labelledby="myModalLabel1" aria-hidden="false" style="display: none;height: 200px;">
+            <div id="myModal1" class="modal hide fade in" tabindex="-1" role="dialog" aria-labelledby="myModalLabel1"
+                 aria-hidden="false" style="display: none;height: 200px;">
 
                 <div class="modal-header">
 
@@ -344,7 +361,6 @@
         </div>
 
 
-
         <!--<div style="height: 200px;width: 100%;"></div>-->
     </div>
 
@@ -366,7 +382,8 @@
 
     <div class="footer-inner">
 
-        2018 &copy; Metronic by keenthemes.Collect from <a href="" title="" target="_blank"></a> - More Templates <a href="" target="_blank" title=""></a>
+        2018 &copy; Metronic by keenthemes.Collect from <a href="" title="" target="_blank"></a> - More Templates <a
+            href="" target="_blank" title=""></a>
 
     </div>
     <div class="footer-tools">
@@ -411,7 +428,7 @@
 
 <script src="__static__/media/js/jquery.cookie.min.js" type="text/javascript"></script>
 
-<script src="__static__/media/js/jquery.uniform.min.js" type="text/javascript" ></script>
+<script src="__static__/media/js/jquery.uniform.min.js" type="text/javascript"></script>
 
 <!-- END CORE PLUGINS -->
 
@@ -460,7 +477,6 @@
 <!-- END PAGE LEVEL SCRIPTS -->
 
 
-
 <script type="text/javascript" src="__static__/hui/lib/jquery/1.9.1/jquery.min.js"></script>
 <script type="text/javascript" src="__static__/hui/lib/layer/2.4/layer.js"></script>
 <script type="text/javascript" src="__static__/hui/static/h-ui/js/H-ui.min.js"></script>
@@ -469,7 +485,7 @@
 
 <script>
 
-    jQuery(document).ready(function() {
+    jQuery(document).ready(function () {
 
         App.init(); // initlayout and core plugins
 
@@ -492,7 +508,7 @@
     });
 
 
-    function notice_add(){
+    function notice_add() {
         $("#form-admin-add").toggle("fast");
     }
 
@@ -500,33 +516,34 @@
         layer_show(title, url, w, h);
     }
 
-    $('#nonot').click(function(){
+    $('#nonot').click(function () {
         $('#myModal1').toggle("fast");
         hideOverlay();
     });
 
 
-
-    function delete_n(nid){
+    function delete_n(nid) {
         showOverlay();
-        var img =$('#imag').val();
+        var img = $('#imag').val();
         $('#myModal1').toggle("fast");
-        $('#yes').click(function(){
+        $('#yes').click(function () {
             $.ajax({
                 type: "post",
                 url: "{:url('index/menu/delete_lunbo')}",
                 dataType: "json",
                 data: {
-                    nid:nid,
-                    image:img
+                    nid: nid,
+                    image: img
                 },
                 success: function (res) {
-                    if(res.code == 2) {
+                    if (res.code == 2) {
                         alert(res.msg);
 
                     } else if (res.code == 1) {
                         alert(res.msg);
-                        setTimeout(function(){window.location.reload()},500);
+                        setTimeout(function () {
+                            window.location.reload()
+                        }, 500);
                     }
                 }, fail: function (res) {
                     alert("网络错误");
@@ -557,7 +574,7 @@
         var fileInput = document.getElementById("image");
         var file = fileInput.files[0];
         var formData = new FormData();
-        formData.append("image",file);
+        formData.append("image", file);
         $.ajax({
             url: "{:url('index/menu/add_lunbo')}",
             type: 'POST',
@@ -567,11 +584,13 @@
             processData: false,//用于对data参数进行序列化处理 这里必须false
             contentType: false, //必须
             success: function (res) {
-                if(res.code == 2) {
+                if (res.code == 2) {
                     alert(res.msg);
                 } else if (res.code == 1) {
                     alert(res.msg);
-                    setTimeout(function(){window.location.reload()},500);
+                    setTimeout(function () {
+                        window.location.reload()
+                    }, 500);
                 }
             }, fail: function (res) {
 
