--- a/mubei_admin/application/index/view/menu/noticemanage.html
+++ b/mubei_admin/application/index/view/menu/noticemanage.html
@@ -1,24 +1,27 @@
 <!DOCTYPE html>
 
-<!--[if IE 8]> <html lang="en" class="ie8 no-js"> <![endif]-->
+<!--[if IE 8]>
+<html lang="en" class="ie8 no-js"> <![endif]-->
 
-<!--[if IE 9]> <html lang="en" class="ie9 no-js"> <![endif]-->
+<!--[if IE 9]>
+<html lang="en" class="ie9 no-js"> <![endif]-->
 
-<!--[if !IE]><!--> <html lang="en" class="no-js"> <!--<![endif]-->
+<!--[if !IE]><!-->
+<html lang="en" class="no-js"> <!--<![endif]-->
 
 <!-- BEGIN HEAD -->
 
 <head>
 
-    <meta charset="utf-8" />
+    <meta charset="utf-8"/>
 
     <title>公告管理</title>
 
-    <meta content="width=device-width, initial-scale=1.0" name="viewport" />
+    <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
 
-    <meta content="" name="description" />
+    <meta content="" name="description"/>
 
-    <meta content="" name="author" />
+    <meta content="" name="author"/>
     <link rel="stylesheet" type="text/css" href="__static__/hui/static/h-ui/css/H-ui.min.css"/>
     <!-- BEGIN GLOBAL MANDATORY STYLES -->
 
@@ -45,7 +48,7 @@
 
     <link href="__static__/media/css/jquery.gritter.css" rel="stylesheet" type="text/css"/>
 
-    <link href="__static__/media/css/daterangepicker.css" rel="stylesheet" type="text/css" />
+    <link href="__static__/media/css/daterangepicker.css" rel="stylesheet" type="text/css"/>
 
     <link href="__static__/media/css/fullcalendar.css" rel="stylesheet" type="text/css"/>
 
@@ -53,7 +56,7 @@
 
     <link href="__static__/media/css/jquery.easy-pie-chart.css" rel="stylesheet" type="text/css" media="screen"/>
 
-    <link rel="stylesheet" type="text/css" href="__static__/bianji/styles/simditor.css" />
+    <link rel="stylesheet" type="text/css" href="__static__/bianji/styles/simditor.css"/>
     <script src="http://www.jq22.com/jquery/jquery-1.10.2.js"></script>
     <script type="text/javascript" src="__static__/bianji/scripts/module.min.js"></script>
     <script type="text/javascript" src="__static__/bianji/scripts/hotkeys.min.js"></script>
@@ -61,10 +64,21 @@
     <script type="text/javascript" src="__static__/bianji/scripts/simditor.min.js"></script>
     <!-- END PAGE LEVEL STYLES -->
 
-    <link rel="shortcut icon" href="__static__/media/image/favicon.ico" />
+    <link rel="shortcut icon" href="__static__/media/image/favicon.ico"/>
 
     <style>
-        #overlay {  background: #000;  display: none;  filter: alpha(opacity=50); /* IE的透明度 */  opacity: 0.5;  /* 透明度 */  position: absolute;  top: 0;  left: 0;  width: 100%;  height: 100%;  z-index: 100; /* 此处的图层要大于页面 */  }
+        #overlay {
+            background: #000;
+            display: none;
+            filter: alpha(opacity=50); /* IE的透明度 */
+            opacity: 0.5; /* 透明度 */
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            z-index: 100; /* 此处的图层要大于页面 */
+        }
 
     </style>
 </head>
@@ -76,7 +90,7 @@
 <body class="page-header-fixed" style="padding-bottom: 5%;">
 
 <!-- BEGIN HEADER -->
-{include file="common/common"  /}
+{include file="common/common" /}
 
 <!-- END SIDEBAR -->
 
@@ -241,7 +255,6 @@
             <!-- BEGIN DASHBOARD STATS -->
 
 
-
             <!-- END DASHBOARD STATS -->
 
             <div class="clearfix"></div>
@@ -258,7 +271,7 @@
                 <div class="row cl">
                     <label class="form-label col-xs-4 col-sm-3">内容：</label>
                     <div class="formControls col-xs-8 col-sm-9">
-                        <textarea id="editor" placeholder="" autofocus  class="textarea" ></textarea>
+                        <textarea id="editor" placeholder="" autofocus class="textarea"></textarea>
                         <!--<textarea name="content" id="content" cols="" rows="" class="textarea" placeholder=""></textarea>-->
                     </div>
                 </div>
@@ -323,8 +336,13 @@
                             <td data-title="公告内容"><?php echo $vo['n_text']?></td>
                             <td data-title="时间" class="numeric"><?php echo date('Y-m-d H:i:s', $vo['time']) ?></td>
                             <?php if($admin['type'] != 2){ ?>
-                            <td data-title="操作" class="numeric"><button type="button" class="btn red" onclick="delete_n(<?php echo $vo['n_id']?>)">删除</button>
-                                <button onclick="admin_add('修改公告','{:url('index/user/noticemanage_t?nid='.$vo['n_id'])}','400','400')" type="button" class="btn blue">修改</button></td>
+                            <td data-title="操作" class="numeric">
+                                <button type="button" class="btn red" onclick="delete_n(<?php echo $vo['n_id']?>)">删除
+                                </button>
+                                <button onclick="admin_add('修改公告','{:url('index/user/noticemanage_t?nid='.$vo['n_id'])}','400','400')"
+                                        type="button" class="btn blue">修改
+                                </button>
+                            </td>
                             <?php }?>
                         </tr>
                         <?php } ?>
@@ -339,7 +357,8 @@
             <div style="width: 100%;height: 400px;"></div>
 
 
-            <div id="myModal1" class="modal hide fade in" tabindex="-1" role="dialog" aria-labelledby="myModalLabel1" aria-hidden="false" style="display: none;height: 200px;">
+            <div id="myModal1" class="modal hide fade in" tabindex="-1" role="dialog" aria-labelledby="myModalLabel1"
+                 aria-hidden="false" style="display: none;height: 200px;">
 
                 <div class="modal-header">
 
@@ -368,7 +387,6 @@
         </div>
 
 
-
         <!--<div style="height: 200px;width: 100%;"></div>-->
     </div>
 
@@ -390,7 +408,8 @@
 
     <div class="footer-inner">
 
-        2018 &copy; Metronic by keenthemes.Collect from <a href="" title="" target="_blank"></a> - More Templates <a href="" target="_blank" title=""></a>
+        2018 &copy; Metronic by keenthemes.Collect from <a href="" title="" target="_blank"></a> - More Templates <a
+            href="" target="_blank" title=""></a>
 
     </div>
     <div class="footer-tools">
@@ -435,7 +454,7 @@
 
 <script src="__static__/media/js/jquery.cookie.min.js" type="text/javascript"></script>
 
-<script src="__static__/media/js/jquery.uniform.min.js" type="text/javascript" ></script>
+<script src="__static__/media/js/jquery.uniform.min.js" type="text/javascript"></script>
 
 <!-- END CORE PLUGINS -->
 
@@ -484,7 +503,6 @@
 <!-- END PAGE LEVEL SCRIPTS -->
 
 
-
 <script type="text/javascript" src="__static__/hui/lib/jquery/1.9.1/jquery.min.js"></script>
 <script type="text/javascript" src="__static__/hui/lib/layer/2.4/layer.js"></script>
 <script type="text/javascript" src="__static__/hui/static/h-ui/js/H-ui.min.js"></script>
@@ -493,7 +511,7 @@
 
 <script>
 
-    jQuery(document).ready(function() {
+    jQuery(document).ready(function () {
 
         App.init(); // initlayout and core plugins
 
@@ -516,7 +534,7 @@
     });
 
 
-    function notice_add(){
+    function notice_add() {
         $("#form-admin-add").toggle("fast");
     }
 
@@ -524,31 +542,32 @@
         layer_show(title, url, w, h);
     }
 
-    $('#nonot').click(function(){
+    $('#nonot').click(function () {
         $('#myModal1').toggle("fast");
         hideOverlay();
     });
 
 
-
-    function delete_n(nid){
+    function delete_n(nid) {
         showOverlay();
         $('#myModal1').toggle("fast");
-        $('#yes').click(function(){
+        $('#yes').click(function () {
             $.ajax({
                 type: "post",
                 url: "{:url('index/menu/noticeManage_y')}",
                 dataType: "json",
                 data: {
-                    nid:nid
+                    nid: nid
                 },
                 success: function (res) {
-                    if(res.code == 2) {
+                    if (res.code == 2) {
                         alert(res.msg);
 
                     } else if (res.code == 1) {
                         alert(res.msg);
-                        setTimeout(function(){window.location.reload()},500);
+                        setTimeout(function () {
+                            window.location.reload()
+                        }, 500);
                     }
                 }, fail: function (res) {
                     alert("网络错误");
@@ -583,16 +602,18 @@
             url: "{:url('index/menu/noticeManage_c')}",
             dataType: "json",
             data: {
-                title:title,
+                title: title,
                 content: content
             },
             success: function (res) {
-                if(res.code == 2) {
+                if (res.code == 2) {
                     alert(res.msg);
 
                 } else if (res.code == 1) {
                     alert(res.msg);
-                    setTimeout(function(){window.location.reload()},500);
+                    setTimeout(function () {
+                        window.location.reload()
+                    }, 500);
                 }
             }, fail: function (res) {
                 alert("网络错误");
