--- a/mubei_admin/application/index/view/menu/sell.html
+++ b/mubei_admin/application/index/view/menu/sell.html
@@ -1,24 +1,27 @@
 <!DOCTYPE html>
 
-<!--[if IE 8]> <html lang="en" class="ie8 no-js"> <![endif]-->
+<!--[if IE 8]>
+<html lang="en" class="ie8 no-js"> <![endif]-->
 
-<!--[if IE 9]> <html lang="en" class="ie9 no-js"> <![endif]-->
+<!--[if IE 9]>
+<html lang="en" class="ie9 no-js"> <![endif]-->
 
-<!--[if !IE]><!--> <html lang="en" class="no-js"> <!--<![endif]-->
+<!--[if !IE]><!-->
+<html lang="en" class="no-js"> <!--<![endif]-->
 
 <!-- BEGIN HEAD -->
 
 <head>
 
-    <meta charset="utf-8" />
+    <meta charset="utf-8"/>
 
     <title>卖出挂单</title>
 
-    <meta content="width=device-width, initial-scale=1.0" name="viewport" />
+    <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
 
-    <meta content="" name="description" />
+    <meta content="" name="description"/>
 
-    <meta content="" name="author" />
+    <meta content="" name="author"/>
 
     <!-- BEGIN GLOBAL MANDATORY STYLES -->
 
@@ -44,7 +47,7 @@
 
     <link href="__static__/media/css/jquery.gritter.css" rel="stylesheet" type="text/css"/>
 
-    <link href="__static__/media/css/daterangepicker.css" rel="stylesheet" type="text/css" />
+    <link href="__static__/media/css/daterangepicker.css" rel="stylesheet" type="text/css"/>
 
     <link href="__static__/media/css/fullcalendar.css" rel="stylesheet" type="text/css"/>
 
@@ -54,7 +57,7 @@
 
     <!-- END PAGE LEVEL STYLES -->
 
-    <link rel="shortcut icon" href="__static__/media/image/favicon.ico" />
+    <link rel="shortcut icon" href="__static__/media/image/favicon.ico"/>
 
 </head>
 
@@ -65,305 +68,302 @@
 <body class="page-header-fixed" style="padding-bottom: 5%;">
 
 <!-- BEGIN HEADER -->
-{include file="common/common"  /}
+{include file="common/common" /}
 
-    <!-- END SIDEBAR -->
+<!-- END SIDEBAR -->
 
-    <!-- BEGIN PAGE -->
+<!-- BEGIN PAGE -->
 
-    <div class="page-content">
+<div class="page-content">
 
-        <!-- BEGIN SAMPLE PORTLET CONFIGURATION MODAL FORM-->
+    <!-- BEGIN SAMPLE PORTLET CONFIGURATION MODAL FORM-->
 
-        <div id="portlet-config" class="modal hide">
+    <div id="portlet-config" class="modal hide">
 
-            <div class="modal-header">
+        <div class="modal-header">
 
-                <button data-dismiss="modal" class="close" type="button"></button>
+            <button data-dismiss="modal" class="close" type="button"></button>
 
-                <h3>Widget Settings</h3>
+            <h3>Widget Settings</h3>
 
-            </div>
+        </div>
 
-            <div class="modal-body">
+        <div class="modal-body">
 
-                Widget settings form goes here
+            Widget settings form goes here
+
+        </div>
+
+    </div>
+
+    <!-- END SAMPLE PORTLET CONFIGURATION MODAL FORM-->
+
+    <!-- BEGIN PAGE CONTAINER-->
+
+    <div class="container-fluid">
+
+        <!-- BEGIN PAGE HEADER-->
+
+        <div class="row-fluid">
+
+            <div class="span12">
+
+                <!-- BEGIN STYLE CUSTOMIZER -->
+
+                <div class="color-panel hidden-phone">
+
+
+                    <div class="color-mode">
+
+                        <p>THEME COLOR</p>
+
+                        <ul class="inline">
+
+                            <li class="color-black current color-default" data-style="default"></li>
+
+                            <li class="color-blue" data-style="blue"></li>
+
+                            <li class="color-brown" data-style="brown"></li>
+
+                            <li class="color-purple" data-style="purple"></li>
+
+                            <li class="color-grey" data-style="grey"></li>
+
+                            <li class="color-white color-light" data-style="light"></li>
+
+                        </ul>
+
+                        <label>
+
+                            <span>Layout</span>
+
+                            <select class="layout-option m-wrap small">
+
+                                <option value="fluid" selected>Fluid</option>
+
+                                <option value="boxed">Boxed</option>
+
+                            </select>
+
+                        </label>
+
+                        <label>
+
+                            <span>Header</span>
+
+                            <select class="header-option m-wrap small">
+
+                                <option value="fixed" selected>Fixed</option>
+
+                                <option value="default">Default</option>
+
+                            </select>
+
+                        </label>
+
+                        <label>
+
+                            <span>Sidebar</span>
+
+                            <select class="sidebar-option m-wrap small">
+
+                                <option value="fixed">Fixed</option>
+
+                                <option value="default" selected>Default</option>
+
+                            </select>
+
+                        </label>
+
+                        <label>
+
+                            <span>Footer</span>
+
+                            <select class="footer-option m-wrap small">
+
+                                <option value="fixed">Fixed</option>
+
+                                <option value="default" selected>Default</option>
+
+                            </select>
+
+                        </label>
+
+                    </div>
+
+                </div>
+
+                <!-- END BEGIN STYLE CUSTOMIZER -->
+
+                <!-- BEGIN PAGE TITLE & BREADCRUMB-->
+
+                <h3 class="page-title">
+
+                    卖出挂单
+
+                </h3>
+
+                <ul class="breadcrumb">
+
+                    <li>
+
+                        <i class="icon-home"></i>
+
+                        <a href="javascript:;">首页</a>
+
+                        <i class="icon-angle-right"></i>
+
+                    </li>
+
+                    <li><a href="javascript:;">卖出挂单</a></li>
+
+
+                </ul>
+
+                <!-- END PAGE TITLE & BREADCRUMB-->
 
             </div>
 
         </div>
+        <?php if($admin['type'] != 2){ ?>
+        <a href="javascript:;" onclick="delete_order()" class="btn blue"><i class="icon-plus"></i>清空已完成订单</a>
+        <?php }?>
+        <div id="dashboard">
 
-        <!-- END SAMPLE PORTLET CONFIGURATION MODAL FORM-->
+            <!-- BEGIN DASHBOARD STATS -->
 
-        <!-- BEGIN PAGE CONTAINER-->
 
-        <div class="container-fluid">
+            <!-- END DASHBOARD STATS -->
 
-            <!-- BEGIN PAGE HEADER-->
+            <div class="clearfix"></div>
 
-            <div class="row-fluid">
 
-                <div class="span12">
+            <div class="chat-form">
 
-                    <!-- BEGIN STYLE CUSTOMIZER -->
+                <!--<div class="input-cont">-->
 
-                    <div class="color-panel hidden-phone">
+                <!--<input class="m-wrap" type="text" placeholder="搜索会员">-->
 
+                <!--</div>-->
 
-                        <div class="color-mode">
+                <!--<div class="btn-cont">-->
 
-                            <p>THEME COLOR</p>
+                <!--<span class="arrow"></span>-->
 
-                            <ul class="inline">
+                <!--<a href="javascript:;" class="btn blue icn-only"><i class="icon-ok icon-white"></i></a>-->
 
-                                <li class="color-black current color-default" data-style="default"></li>
-
-                                <li class="color-blue" data-style="blue"></li>
-
-                                <li class="color-brown" data-style="brown"></li>
-
-                                <li class="color-purple" data-style="purple"></li>
-
-                                <li class="color-grey" data-style="grey"></li>
-
-                                <li class="color-white color-light" data-style="light"></li>
-
-                            </ul>
-
-                            <label>
-
-                                <span>Layout</span>
-
-                                <select class="layout-option m-wrap small">
-
-                                    <option value="fluid" selected>Fluid</option>
-
-                                    <option value="boxed">Boxed</option>
-
-                                </select>
-
-                            </label>
-
-                            <label>
-
-                                <span>Header</span>
-
-                                <select class="header-option m-wrap small">
-
-                                    <option value="fixed" selected>Fixed</option>
-
-                                    <option value="default">Default</option>
-
-                                </select>
-
-                            </label>
-
-                            <label>
-
-                                <span>Sidebar</span>
-
-                                <select class="sidebar-option m-wrap small">
-
-                                    <option value="fixed">Fixed</option>
-
-                                    <option value="default" selected>Default</option>
-
-                                </select>
-
-                            </label>
-
-                            <label>
-
-                                <span>Footer</span>
-
-                                <select class="footer-option m-wrap small">
-
-                                    <option value="fixed">Fixed</option>
-
-                                    <option value="default" selected>Default</option>
-
-                                </select>
-
-                            </label>
-
-                        </div>
-
-                    </div>
-
-                    <!-- END BEGIN STYLE CUSTOMIZER -->
-
-                    <!-- BEGIN PAGE TITLE & BREADCRUMB-->
-
-                    <h3 class="page-title">
-
-                        卖出挂单
-
-                    </h3>
-
-                    <ul class="breadcrumb">
-
-                        <li>
-
-                            <i class="icon-home"></i>
-
-                            <a href="javascript:;">首页</a>
-
-                            <i class="icon-angle-right"></i>
-
-                        </li>
-
-                        <li><a href="javascript:;">卖出挂单</a></li>
-
-
-                    </ul>
-
-                    <!-- END PAGE TITLE & BREADCRUMB-->
-
-                </div>
+                <!--</div>-->
 
             </div>
-            <?php if($admin['type'] != 2){ ?>
-            <a href="javascript:;" onclick="delete_order()" class="btn blue"><i class="icon-plus"></i>清空已完成订单</a>
-            <?php }?>
-            <div id="dashboard">
+            <div class="clearfix"></div>
+            <div class="portlet box blue">
 
-                <!-- BEGIN DASHBOARD STATS -->
+                <div class="portlet-title">
 
+                    <div class="caption"><i class="icon-cogs"></i>卖出挂单</div>
 
-
-                <!-- END DASHBOARD STATS -->
-
-                <div class="clearfix"></div>
-
-
-                <div class="chat-form">
-
-                    <!--<div class="input-cont">-->
-
-                        <!--<input class="m-wrap" type="text" placeholder="搜索会员">-->
-
-                    <!--</div>-->
-
-                    <!--<div class="btn-cont">-->
-
-                        <!--<span class="arrow"></span>-->
-
-                        <!--<a href="javascript:;" class="btn blue icn-only"><i class="icon-ok icon-white"></i></a>-->
-
-                    <!--</div>-->
 
                 </div>
-                <div class="clearfix"></div>
-                <div class="portlet box blue">
 
-                    <div class="portlet-title">
+                <div class="portlet-body no-more-tables" style="padding-bottom: 5%;">
 
-                        <div class="caption"><i class="icon-cogs"></i>卖出挂单</div>
+                    <table class="table-bordered table-striped table-condensed cf">
 
+                        <thead class="cf">
 
-                    </div>
+                        <tr>
 
-                    <div class="portlet-body no-more-tables" style="padding-bottom: 5%;">
+                            <th>卖出用户uid</th>
+                            <th class="numeric">卖出金额</th>
+                            <!--<th>Company</th>-->
+                            <th class="numeric">买入用户uid</th>
 
-                        <table class="table-bordered table-striped table-condensed cf">
-
-                            <thead class="cf">
-
-                            <tr>
-
-                                <th>卖出用户uid</th>
-                                <th class="numeric">卖出金额</th>
-                                <!--<th>Company</th>-->
-                                <th class="numeric">买入用户uid</th>
-
-                                <th class="numeric">交易状态</th>
-                                <th class="numeric">时间</th>
+                            <th class="numeric">交易状态</th>
+                            <th class="numeric">时间</th>
 
 
-                            </tr>
+                        </tr>
 
-                            </thead>
+                        </thead>
 
-                            <tbody>
-                            <?php foreach($order as $vo ){ ?>
-                            <tr style="text-align: center">
-                                <td data-title="用户uid"><?php echo $vo['u_id']?></td>
-                                <td data-title="卖出金额"><?php echo $vo['money']?></td>
-                                <td data-title="买入用户uid"><?php if($vo['user']){ echo $vo['user']; }else{ echo '暂无'; }?></td>
-                                <!--<td data-title="Company">AUSTRALIAN AGRICULTURAL COMPANY LIMITED.</td>-->
-                                <td data-title="交易状态">  <?php if($vo['static'] == 1){ ?>
-                                    <?php echo '挂卖中';?>
-                                    <?php }else if($vo['static'] == 2){ echo '等待支付';}
+                        <tbody>
+                        <?php foreach($order as $vo ){ ?>
+                        <tr style="text-align: center">
+                            <td data-title="用户uid"><?php echo $vo['u_id']?></td>
+                            <td data-title="卖出金额"><?php echo $vo['money']?></td>
+                            <td data-title="买入用户uid"><?php if($vo['user']){ echo $vo['user']; }else{ echo '暂无'; }?></td>
+                            <!--<td data-title="Company">AUSTRALIAN AGRICULTURAL COMPANY LIMITED.</td>-->
+                            <td data-title="交易状态">  <?php if($vo['static'] == 1){ ?>
+                                <?php echo '挂卖中';?>
+                                <?php }else if($vo['static'] == 2){ echo '等待支付';}
                     else if($vo['static'] == 3){ echo '等待确认收款';}else if($vo['static'] == 4){ echo '已完成';}
 
                      ?>
 
-                                </td>
-                                <td data-title="时间" class="numeric"><?php echo date('Y-m-d H:i:s', $vo['time']) ?></td>
+                            </td>
+                            <td data-title="时间" class="numeric"><?php echo date('Y-m-d H:i:s', $vo['time']) ?></td>
 
 
-                            </tr>
-                            <?php } ?>
-                            </tbody>
+                        </tr>
+                        <?php } ?>
+                        </tbody>
 
-                        </table>
-                        {$order->render()}
-                    </div>
-
+                    </table>
+                    {$order->render()}
                 </div>
 
-                <div style="width: 100%;height: 400px;"></div>
-
             </div>
 
-
-
-            <!--<div style="height: 200px;width: 100%;"></div>-->
-        </div>
-        <div id="myModal1" class="modal hide fade in" tabindex="-1" role="dialog" aria-labelledby="myModalLabel1" aria-hidden="false" style="display: none;height: 200px;">
-
-            <div class="modal-header">
-
-                <button type="button" onclick="remo()" class="close" data-dismiss="modal" aria-hidden="true"></button>
-
-                <h3 id="myModalLabel1">提示</h3>
-
-            </div>
-
-            <div class="modal-body">
-
-                <p>确认清空所有已完成订单？</p>
-
-            </div>
-
-            <div class="modal-footer">
-
-                <button class="btn" onclick="remo()" id="nonot" data-dismiss="modal" aria-hidden="true">取消</button>
-
-                <button class="btn yellow" id="yes">确定</button>
-
-            </div>
+            <div style="width: 100%;height: 400px;"></div>
 
         </div>
 
-        <script>
 
+        <!--<div style="height: 200px;width: 100%;"></div>-->
+    </div>
+    <div id="myModal1" class="modal hide fade in" tabindex="-1" role="dialog" aria-labelledby="myModalLabel1"
+         aria-hidden="false" style="display: none;height: 200px;">
 
+        <div class="modal-header">
 
-            function remo(){
-                $('#myModal1').hide();
-            }
-        </script>
-        <!-- END PAGE CONTAINER-->
+            <button type="button" onclick="remo()" class="close" data-dismiss="modal" aria-hidden="true"></button>
+
+            <h3 id="myModalLabel1">提示</h3>
+
+        </div>
+
+        <div class="modal-body">
+
+            <p>确认清空所有已完成订单？</p>
+
+        </div>
+
+        <div class="modal-footer">
+
+            <button class="btn" onclick="remo()" id="nonot" data-dismiss="modal" aria-hidden="true">取消</button>
+
+            <button class="btn yellow" id="yes">确定</button>
+
+        </div>
 
     </div>
 
-    <!-- END PAGE -->
+    <script>
+
+
+        function remo() {
+            $('#myModal1').hide();
+        }
+    </script>
+    <!-- END PAGE CONTAINER-->
+
+</div>
+
+<!-- END PAGE -->
 
 </div>
 
 <!-- END CONTAINER -->
-
 
 
 <!-- BEGIN FOOTER -->
@@ -372,7 +372,8 @@
 
     <div class="footer-inner">
 
-        2018 &copy; Metronic by keenthemes.Collect from <a href="" title="" target="_blank"></a> - More Templates <a href="" target="_blank" title=""></a>
+        2018 &copy; Metronic by keenthemes.Collect from <a href="" title="" target="_blank"></a> - More Templates <a
+            href="" target="_blank" title=""></a>
 
     </div>
 
@@ -418,7 +419,7 @@
 
 <script src="__static__/media/js/jquery.cookie.min.js" type="text/javascript"></script>
 
-<script src="__static__/media/js/jquery.uniform.min.js" type="text/javascript" ></script>
+<script src="__static__/media/js/jquery.uniform.min.js" type="text/javascript"></script>
 
 <!-- END CORE PLUGINS -->
 
@@ -474,7 +475,7 @@
 
 <script>
 
-    jQuery(document).ready(function() {
+    jQuery(document).ready(function () {
 
         App.init(); // initlayout and core plugins
 
@@ -497,25 +498,26 @@
     });
 
 
-
     function admin_add(title, url, w, h) {
         layer_show(title, url, w, h);
     }
 
-    function delete_order(){
+    function delete_order() {
         $('#myModal1').toggle("fast");
-        $('#yes').click(function(){
+        $('#yes').click(function () {
             $.ajax({
                 type: "post",
                 url: "{:url('index/menu/delete_sell_order')}",
                 dataType: "json",
                 data: {},
                 success: function (res) {
-                    if(res.code == 2) {
+                    if (res.code == 2) {
                         alert(res.msg);
                     } else if (res.code == 1) {
                         alert(res.msg);
-                        setTimeout(function(){window.location.reload()},500);
+                        setTimeout(function () {
+                            window.location.reload()
+                        }, 500);
                     }
                 }, fail: function (res) {
                     alert("网络错误");
