--- a/mubei_admin/application/index/view/menu/share.html
+++ b/mubei_admin/application/index/view/menu/share.html
@@ -1,24 +1,27 @@
 <!DOCTYPE html>
 
-<!--[if IE 8]> <html lang="en" class="ie8 no-js"> <![endif]-->
+<!--[if IE 8]>
+<html lang="en" class="ie8 no-js"> <![endif]-->
 
-<!--[if IE 9]> <html lang="en" class="ie9 no-js"> <![endif]-->
+<!--[if IE 9]>
+<html lang="en" class="ie9 no-js"> <![endif]-->
 
-<!--[if !IE]><!--> <html lang="en" class="no-js"> <!--<![endif]-->
+<!--[if !IE]><!-->
+<html lang="en" class="no-js"> <!--<![endif]-->
 
 <!-- BEGIN HEAD -->
 
 <head>
 
-    <meta charset="utf-8" />
+    <meta charset="utf-8"/>
 
     <title>分享记录</title>
 
-    <meta content="width=device-width, initial-scale=1.0" name="viewport" />
+    <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
 
-    <meta content="" name="description" />
+    <meta content="" name="description"/>
 
-    <meta content="" name="author" />
+    <meta content="" name="author"/>
 
     <!-- BEGIN GLOBAL MANDATORY STYLES -->
 
@@ -44,7 +47,7 @@
 
     <link href="__static__/media/css/jquery.gritter.css" rel="stylesheet" type="text/css"/>
 
-    <link href="__static__/media/css/daterangepicker.css" rel="stylesheet" type="text/css" />
+    <link href="__static__/media/css/daterangepicker.css" rel="stylesheet" type="text/css"/>
 
     <link href="__static__/media/css/fullcalendar.css" rel="stylesheet" type="text/css"/>
 
@@ -54,7 +57,7 @@
 
     <!-- END PAGE LEVEL STYLES -->
 
-    <link rel="shortcut icon" href="__static__/media/image/favicon.ico" />
+    <link rel="shortcut icon" href="__static__/media/image/favicon.ico"/>
 
 </head>
 
@@ -65,256 +68,253 @@
 <body class="page-header-fixed" style="padding-bottom: 5%;">
 
 <!-- BEGIN HEADER -->
-{include file="common/common"  /}
+{include file="common/common" /}
 
-    <!-- END SIDEBAR -->
+<!-- END SIDEBAR -->
 
-    <!-- BEGIN PAGE -->
+<!-- BEGIN PAGE -->
 
-    <div class="page-content">
+<div class="page-content">
 
-        <!-- BEGIN SAMPLE PORTLET CONFIGURATION MODAL FORM-->
+    <!-- BEGIN SAMPLE PORTLET CONFIGURATION MODAL FORM-->
 
-        <div id="portlet-config" class="modal hide">
+    <div id="portlet-config" class="modal hide">
 
-            <div class="modal-header">
+        <div class="modal-header">
 
-                <button data-dismiss="modal" class="close" type="button"></button>
+            <button data-dismiss="modal" class="close" type="button"></button>
 
-                <h3>Widget Settings</h3>
-
-            </div>
-
-            <div class="modal-body">
-
-                Widget settings form goes here
-
-            </div>
+            <h3>Widget Settings</h3>
 
         </div>
 
-        <!-- END SAMPLE PORTLET CONFIGURATION MODAL FORM-->
+        <div class="modal-body">
 
-        <!-- BEGIN PAGE CONTAINER-->
+            Widget settings form goes here
 
-        <div class="container-fluid">
-
-            <!-- BEGIN PAGE HEADER-->
-
-            <div class="row-fluid">
-
-                <div class="span12">
-
-                    <!-- BEGIN STYLE CUSTOMIZER -->
-
-                    <div class="color-panel hidden-phone">
-
-
-                        <div class="color-mode">
-
-                            <p>THEME COLOR</p>
-
-                            <ul class="inline">
-
-                                <li class="color-black current color-default" data-style="default"></li>
-
-                                <li class="color-blue" data-style="blue"></li>
-
-                                <li class="color-brown" data-style="brown"></li>
-
-                                <li class="color-purple" data-style="purple"></li>
-
-                                <li class="color-grey" data-style="grey"></li>
-
-                                <li class="color-white color-light" data-style="light"></li>
-
-                            </ul>
-
-                            <label>
-
-                                <span>Layout</span>
-
-                                <select class="layout-option m-wrap small">
-
-                                    <option value="fluid" selected>Fluid</option>
-
-                                    <option value="boxed">Boxed</option>
-
-                                </select>
-
-                            </label>
-
-                            <label>
-
-                                <span>Header</span>
-
-                                <select class="header-option m-wrap small">
-
-                                    <option value="fixed" selected>Fixed</option>
-
-                                    <option value="default">Default</option>
-
-                                </select>
-
-                            </label>
-
-                            <label>
-
-                                <span>Sidebar</span>
-
-                                <select class="sidebar-option m-wrap small">
-
-                                    <option value="fixed">Fixed</option>
-
-                                    <option value="default" selected>Default</option>
-
-                                </select>
-
-                            </label>
-
-                            <label>
-
-                                <span>Footer</span>
-
-                                <select class="footer-option m-wrap small">
-
-                                    <option value="fixed">Fixed</option>
-
-                                    <option value="default" selected>Default</option>
-
-                                </select>
-
-                            </label>
-
-                        </div>
-
-                    </div>
-
-                    <!-- END BEGIN STYLE CUSTOMIZER -->
-
-                    <!-- BEGIN PAGE TITLE & BREADCRUMB-->
-
-                    <h3 class="page-title">
-
-                        分享记录
-
-                    </h3>
-
-                    <ul class="breadcrumb">
-
-                        <li>
-
-                            <i class="icon-home"></i>
-
-                            <a href="javascript:;">首页</a>
-
-                            <i class="icon-angle-right"></i>
-
-                        </li>
-
-                        <li><a href="javascript:;">分享记录</a></li>
-
-
-                    </ul>
-
-                    <!-- END PAGE TITLE & BREADCRUMB-->
-
-                </div>
-
-            </div>
-
-            <!-- END PAGE HEADER-->
-
-            <div id="dashboard">
-
-                <!-- BEGIN DASHBOARD STATS -->
-
-
-
-                <!-- END DASHBOARD STATS -->
-
-                <div class="clearfix"></div>
-
-
-                <div class="chat-form">
-
-                    <!--<div class="input-cont">-->
-
-                        <!--<input class="m-wrap" type="text" placeholder="搜索会员">-->
-
-                    <!--</div>-->
-
-                    <!--<div class="btn-cont">-->
-
-                        <!--<span class="arrow"></span>-->
-
-                        <!--<a href="javascript:;" class="btn blue icn-only"><i class="icon-ok icon-white"></i></a>-->
-
-                    <!--</div>-->
-
-                </div>
-                <div class="clearfix"></div>
-                <div class="portlet box blue">
-
-                    <div class="portlet-title">
-
-                        <div class="caption"><i class="icon-cogs"></i>分享记录</div>
-
-
-                    </div>
-
-                    <div class="portlet-body no-more-tables" style="padding-bottom: 5%;">
-
-                        <table class="table-bordered table-striped table-condensed cf">
-
-                            <thead class="cf">
-
-                            <tr>
-
-                                <th>用户</th>
-                                <th class="numeric">分享用户</th>
-                                <th class="numeric">时间</th>
-
-
-                            </tr>
-
-                            </thead>
-
-                            <tbody>
-                            <?php foreach($order as $vo ){ ?>
-                            <tr style="text-align: center">
-                                <td data-title="用户uid"><?php echo $vo['u_id']?></td>
-                                <td data-title="分享用户"><?php echo $vo['user']?></td>
-                                <td data-title="时间" class="numeric"><?php echo date('Y-m-d H:i:s', $vo['time']) ?></td>
-                            </tr>
-                            <?php } ?>
-                            </tbody>
-
-                        </table>
-                        {$order->render()}
-                    </div>
-
-                </div>
-
-                <div style="width: 100%;height: 400px;"></div>
-
-            </div>
-
-
-
-            <!--<div style="height: 200px;width: 100%;"></div>-->
         </div>
-
-        <!-- END PAGE CONTAINER-->
 
     </div>
 
-    <!-- END PAGE -->
+    <!-- END SAMPLE PORTLET CONFIGURATION MODAL FORM-->
+
+    <!-- BEGIN PAGE CONTAINER-->
+
+    <div class="container-fluid">
+
+        <!-- BEGIN PAGE HEADER-->
+
+        <div class="row-fluid">
+
+            <div class="span12">
+
+                <!-- BEGIN STYLE CUSTOMIZER -->
+
+                <div class="color-panel hidden-phone">
+
+
+                    <div class="color-mode">
+
+                        <p>THEME COLOR</p>
+
+                        <ul class="inline">
+
+                            <li class="color-black current color-default" data-style="default"></li>
+
+                            <li class="color-blue" data-style="blue"></li>
+
+                            <li class="color-brown" data-style="brown"></li>
+
+                            <li class="color-purple" data-style="purple"></li>
+
+                            <li class="color-grey" data-style="grey"></li>
+
+                            <li class="color-white color-light" data-style="light"></li>
+
+                        </ul>
+
+                        <label>
+
+                            <span>Layout</span>
+
+                            <select class="layout-option m-wrap small">
+
+                                <option value="fluid" selected>Fluid</option>
+
+                                <option value="boxed">Boxed</option>
+
+                            </select>
+
+                        </label>
+
+                        <label>
+
+                            <span>Header</span>
+
+                            <select class="header-option m-wrap small">
+
+                                <option value="fixed" selected>Fixed</option>
+
+                                <option value="default">Default</option>
+
+                            </select>
+
+                        </label>
+
+                        <label>
+
+                            <span>Sidebar</span>
+
+                            <select class="sidebar-option m-wrap small">
+
+                                <option value="fixed">Fixed</option>
+
+                                <option value="default" selected>Default</option>
+
+                            </select>
+
+                        </label>
+
+                        <label>
+
+                            <span>Footer</span>
+
+                            <select class="footer-option m-wrap small">
+
+                                <option value="fixed">Fixed</option>
+
+                                <option value="default" selected>Default</option>
+
+                            </select>
+
+                        </label>
+
+                    </div>
+
+                </div>
+
+                <!-- END BEGIN STYLE CUSTOMIZER -->
+
+                <!-- BEGIN PAGE TITLE & BREADCRUMB-->
+
+                <h3 class="page-title">
+
+                    分享记录
+
+                </h3>
+
+                <ul class="breadcrumb">
+
+                    <li>
+
+                        <i class="icon-home"></i>
+
+                        <a href="javascript:;">首页</a>
+
+                        <i class="icon-angle-right"></i>
+
+                    </li>
+
+                    <li><a href="javascript:;">分享记录</a></li>
+
+
+                </ul>
+
+                <!-- END PAGE TITLE & BREADCRUMB-->
+
+            </div>
+
+        </div>
+
+        <!-- END PAGE HEADER-->
+
+        <div id="dashboard">
+
+            <!-- BEGIN DASHBOARD STATS -->
+
+
+            <!-- END DASHBOARD STATS -->
+
+            <div class="clearfix"></div>
+
+
+            <div class="chat-form">
+
+                <!--<div class="input-cont">-->
+
+                <!--<input class="m-wrap" type="text" placeholder="搜索会员">-->
+
+                <!--</div>-->
+
+                <!--<div class="btn-cont">-->
+
+                <!--<span class="arrow"></span>-->
+
+                <!--<a href="javascript:;" class="btn blue icn-only"><i class="icon-ok icon-white"></i></a>-->
+
+                <!--</div>-->
+
+            </div>
+            <div class="clearfix"></div>
+            <div class="portlet box blue">
+
+                <div class="portlet-title">
+
+                    <div class="caption"><i class="icon-cogs"></i>分享记录</div>
+
+
+                </div>
+
+                <div class="portlet-body no-more-tables" style="padding-bottom: 5%;">
+
+                    <table class="table-bordered table-striped table-condensed cf">
+
+                        <thead class="cf">
+
+                        <tr>
+
+                            <th>用户</th>
+                            <th class="numeric">分享用户</th>
+                            <th class="numeric">时间</th>
+
+
+                        </tr>
+
+                        </thead>
+
+                        <tbody>
+                        <?php foreach($order as $vo ){ ?>
+                        <tr style="text-align: center">
+                            <td data-title="用户uid"><?php echo $vo['u_id']?></td>
+                            <td data-title="分享用户"><?php echo $vo['user']?></td>
+                            <td data-title="时间" class="numeric"><?php echo date('Y-m-d H:i:s', $vo['time']) ?></td>
+                        </tr>
+                        <?php } ?>
+                        </tbody>
+
+                    </table>
+                    {$order->render()}
+                </div>
+
+            </div>
+
+            <div style="width: 100%;height: 400px;"></div>
+
+        </div>
+
+
+        <!--<div style="height: 200px;width: 100%;"></div>-->
+    </div>
+
+    <!-- END PAGE CONTAINER-->
+
+</div>
+
+<!-- END PAGE -->
 
 </div>
 
 <!-- END CONTAINER -->
-
 
 
 <!-- BEGIN FOOTER -->
@@ -323,7 +323,8 @@
 
     <div class="footer-inner">
 
-        2018 &copy; Metronic by keenthemes.Collect from <a href="" title="" target="_blank"></a> - More Templates <a href="" target="_blank" title=""></a>
+        2018 &copy; Metronic by keenthemes.Collect from <a href="" title="" target="_blank"></a> - More Templates <a
+            href="" target="_blank" title=""></a>
 
     </div>
 
@@ -369,7 +370,7 @@
 
 <script src="__static__/media/js/jquery.cookie.min.js" type="text/javascript"></script>
 
-<script src="__static__/media/js/jquery.uniform.min.js" type="text/javascript" ></script>
+<script src="__static__/media/js/jquery.uniform.min.js" type="text/javascript"></script>
 
 <!-- END CORE PLUGINS -->
 
@@ -425,7 +426,7 @@
 
 <script>
 
-    jQuery(document).ready(function() {
+    jQuery(document).ready(function () {
 
         App.init(); // initlayout and core plugins
 
@@ -446,7 +447,6 @@
         Index.initIntro();
 
     });
-
 
 
     function admin_add(title, url, w, h) {
