--- a/mubei_admin/application/index/view/user/change_lunbo.html
+++ b/mubei_admin/application/index/view/user/change_lunbo.html
@@ -1,25 +1,27 @@
-
 <!DOCTYPE html>
 
-<!--[if IE 8]> <html lang="en" class="ie8"> <![endif]-->
+<!--[if IE 8]>
+<html lang="en" class="ie8"> <![endif]-->
 
-<!--[if IE 9]> <html lang="en" class="ie9"> <![endif]-->
+<!--[if IE 9]>
+<html lang="en" class="ie9"> <![endif]-->
 
-<!--[if !IE]><!--> <html lang="en"> <!--<![endif]-->
+<!--[if !IE]><!-->
+<html lang="en"> <!--<![endif]-->
 
 <!-- BEGIN HEAD -->
 
 <head>
 
-    <meta charset="utf-8" />
+    <meta charset="utf-8"/>
 
     <title>Metronic | Form Stuff - Form Components</title>
 
-    <meta content="width=device-width, initial-scale=1.0" name="viewport" />
+    <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
 
-    <meta content="" name="description" />
+    <meta content="" name="description"/>
 
-    <meta content="" name="author" />
+    <meta content="" name="author"/>
 
     <!-- BEGIN GLOBAL MANDATORY STYLES -->
 
@@ -44,37 +46,37 @@
 
     <!-- BEGIN PAGE LEVEL STYLES -->
 
-    <link rel="stylesheet" type="text/css" href="__static__/media/css/bootstrap-fileupload.css" />
+    <link rel="stylesheet" type="text/css" href="__static__/media/css/bootstrap-fileupload.css"/>
 
-    <link rel="stylesheet" type="text/css" href="__static__/media/css/jquery.gritter.css" />
+    <link rel="stylesheet" type="text/css" href="__static__/media/css/jquery.gritter.css"/>
 
-    <link rel="stylesheet" type="text/css" href="__static__/media/css/chosen.css" />
+    <link rel="stylesheet" type="text/css" href="__static__/media/css/chosen.css"/>
 
-    <link rel="stylesheet" type="text/css" href="__static__/media/css/select2_metro.css" />
+    <link rel="stylesheet" type="text/css" href="__static__/media/css/select2_metro.css"/>
 
-    <link rel="stylesheet" type="text/css" href="__static__/media/css/jquery.tagsinput.css" />
+    <link rel="stylesheet" type="text/css" href="__static__/media/css/jquery.tagsinput.css"/>
 
-    <link rel="stylesheet" type="text/css" href="__static__/media/css/clockface.css" />
+    <link rel="stylesheet" type="text/css" href="__static__/media/css/clockface.css"/>
 
-    <link rel="stylesheet" type="text/css" href="__static__/media/css/bootstrap-wysihtml5.css" />
+    <link rel="stylesheet" type="text/css" href="__static__/media/css/bootstrap-wysihtml5.css"/>
 
-    <link rel="stylesheet" type="text/css" href="__static__/media/css/datepicker.css" />
+    <link rel="stylesheet" type="text/css" href="__static__/media/css/datepicker.css"/>
 
-    <link rel="stylesheet" type="text/css" href="__static__/media/css/timepicker.css" />
+    <link rel="stylesheet" type="text/css" href="__static__/media/css/timepicker.css"/>
 
-    <link rel="stylesheet" type="text/css" href="__static__/media/css/colorpicker.css" />
+    <link rel="stylesheet" type="text/css" href="__static__/media/css/colorpicker.css"/>
 
-    <link rel="stylesheet" type="text/css" href="__static__/media/css/bootstrap-toggle-buttons.css" />
+    <link rel="stylesheet" type="text/css" href="__static__/media/css/bootstrap-toggle-buttons.css"/>
 
-    <link rel="stylesheet" type="text/css" href="__static__/media/css/daterangepicker.css" />
+    <link rel="stylesheet" type="text/css" href="__static__/media/css/daterangepicker.css"/>
 
-    <link rel="stylesheet" type="text/css" href="__static__/media/css/datetimepicker.css" />
+    <link rel="stylesheet" type="text/css" href="__static__/media/css/datetimepicker.css"/>
 
-    <link rel="stylesheet" type="text/css" href="__static__/media/css/multi-select-metro.css" />
+    <link rel="stylesheet" type="text/css" href="__static__/media/css/multi-select-metro.css"/>
 
     <link href="__static__/media/css/bootstrap-modal.css" rel="stylesheet" type="text/css"/>
 
-    <link rel="stylesheet" type="text/css" href="__static__/bianji/styles/simditor.css" />
+    <link rel="stylesheet" type="text/css" href="__static__/bianji/styles/simditor.css"/>
     <script src="http://www.jq22.com/jquery/jquery-1.10.2.js"></script>
     <script type="text/javascript" src="__static__/bianji/scripts/module.min.js"></script>
     <script type="text/javascript" src="__static__/bianji/scripts/hotkeys.min.js"></script>
@@ -83,7 +85,7 @@
 
     <!-- END PAGE LEVEL STYLES -->
 
-    <link rel="shortcut icon" href="__static__/media/image/favicon.ico" />
+    <link rel="shortcut icon" href="__static__/media/image/favicon.ico"/>
 
 </head>
 
@@ -96,7 +98,6 @@
 <!-- BEGIN HEADER -->
 
 
-
 <!-- END HEADER -->
 
 <!-- BEGIN CONTAINER -->
@@ -104,84 +105,78 @@
 <div class="page-container row-fluid">
 
 
+    <div class="portlet box blue">
+
+        <div class="portlet-title">
+            <div class="caption"><i class="icon-reorder"></i>修改轮播图</div>
+        </div>
+
+        <div class="portlet-body form">
+
+            <!-- BEGIN FORM-->
+
+            <form action="#" class="form-horizontal">
 
 
-                <div class="portlet box blue">
+                <div class="control-group">
 
-                    <div class="portlet-title">
-                        <div class="caption"><i class="icon-reorder"></i>修改轮播图</div>
-                    </div>
+                    <label class="control-label">上传资讯图片</label>
 
-                    <div class="portlet-body form">
+                    <div class="controls">
 
-                        <!-- BEGIN FORM-->
+                        <div class="fileupload fileupload-new" data-provides="fileupload">
 
-                        <form action="#" class="form-horizontal">
+                            <div class="fileupload-new thumbnail" style="width: 300px; height: 150px;">
 
+                                <img style="width: 100%;height: 100%;"
+                                     src="<?php echo  '/new_vpay_api/public/static/uploads/'.$shop['lb_img']?>" alt="">
 
+                            </div>
 
+                            <div class="fileupload-preview fileupload-exists thumbnail"
+                                 style="max-width: 200px; max-height: 150px; line-height: 20px;"></div>
 
-                            <div class="control-group">
-
-                                <label class="control-label">上传资讯图片</label>
-
-                                <div class="controls">
-
-                                    <div class="fileupload fileupload-new" data-provides="fileupload">
-
-                                        <div class="fileupload-new thumbnail" style="width: 300px; height: 150px;">
-
-                                            <img style="width: 100%;height: 100%;"
-                                                    src="<?php echo  '/new_vpay_api/public/static/uploads/'.$shop['lb_img']?>" alt="">
-
-                                        </div>
-
-                                        <div class="fileupload-preview fileupload-exists thumbnail" style="max-width: 200px; max-height: 150px; line-height: 20px;"></div>
-
-                                        <div>
+                            <div>
 
                                             <span class="btn btn-file"><span class="fileupload-new">选择图片</span>
 
 													<span class="fileupload-exists">更换图片</span>
 
-													  <input type="file" class="default" accept="image/*"  id="image" name="image"  /> </span>
+													  <input type="file" class="default" accept="image/*" id="image"
+                                                             name="image"/> </span>
 
 
-                                            <a href="#" class="btn fileupload-exists" data-dismiss="fileupload">删除图片</a>
-
-                                        </div>
-
-                                    </div>
-
-                                </div>
+                                <a href="#" class="btn fileupload-exists" data-dismiss="fileupload">删除图片</a>
 
                             </div>
 
-
-
-
-                            <input type="hidden" value="<?php echo $shop['lb_img']?>" id="img"/>
-                            <input type="hidden" value="<?php echo $shop['lb_id']?>" id="lbid"/>
-
-
-
-                            <div class="form-actions">
-                                <button type="button" class="btn blue" onclick="send()"><i class="icon-ok"></i>修改</button>
-
-
-                            </div>
-
-
-                        </form>
-
-                        <!-- END FORM-->
+                        </div>
 
                     </div>
 
                 </div>
 
-                <!-- END PORTLET-->
 
+                <input type="hidden" value="<?php echo $shop['lb_img']?>" id="img"/>
+                <input type="hidden" value="<?php echo $shop['lb_id']?>" id="lbid"/>
+
+
+                <div class="form-actions">
+                    <button type="button" class="btn blue" onclick="send()"><i class="icon-ok"></i>修改</button>
+
+
+                </div>
+
+
+            </form>
+
+            <!-- END FORM-->
+
+        </div>
+
+    </div>
+
+    <!-- END PORTLET-->
 
 
 </div>
@@ -189,7 +184,6 @@
 <!-- END CONTAINER -->
 
 <!-- BEGIN FOOTER -->
-
 
 
 <!-- END FOOTER -->
@@ -222,7 +216,7 @@
 
 <script src="__static__/media/js/jquery.cookie.min.js" type="text/javascript"></script>
 
-<script src="__static__/media/js/jquery.uniform.min.js" type="text/javascript" ></script>
+<script src="__static__/media/js/jquery.uniform.min.js" type="text/javascript"></script>
 
 <!-- END CORE PLUGINS -->
 
@@ -264,9 +258,9 @@
 
 <script type="text/javascript" src="__static__/media/js/jquery.multi-select.js"></script>
 
-<script src="__static__/media/js/bootstrap-modal.js" type="text/javascript" ></script>
+<script src="__static__/media/js/bootstrap-modal.js" type="text/javascript"></script>
 
-<script src="__static__/media/js/bootstrap-modalmanager.js" type="text/javascript" ></script>
+<script src="__static__/media/js/bootstrap-modalmanager.js" type="text/javascript"></script>
 
 <!-- END PAGE__static__/ LEVEL PLUGINS -->
 
@@ -286,10 +280,9 @@
 <link rel="stylesheet" href="__static__/layer/mobile/need/layer.css">
 
 
-
 <script>
 
-    jQuery(document).ready(function() {
+    jQuery(document).ready(function () {
 
         // initiate layout and plugins
 
@@ -299,17 +292,17 @@
 
     });
 
-    function send(){
+    function send() {
         var fileInput = document.getElementById("image");
         var file = fileInput.files[0];
         var formData = new FormData();
-        formData.append("image",file);
-        formData.append("images",$('#img').val());
-        formData.append("nid",$('#lbid').val());
+        formData.append("image", file);
+        formData.append("images", $('#img').val());
+        formData.append("nid", $('#lbid').val());
         console.log(formData);
-        if(!formData){
+        if (!formData) {
             alert("请选择图片");
-        }else{
+        } else {
             $.ajax({
                 url: "{:url('index/menu/change_lunbo')}",
                 type: 'POST',
@@ -319,7 +312,7 @@
                 processData: false,//用于对data参数进行序列化处理 这里必须false
                 contentType: false, //必须
                 success: function (res) {
-                    if(res.code == 2) {
+                    if (res.code == 2) {
                         layer.open({
                             content: res.msg
                             , skin: 'msg'
@@ -331,7 +324,9 @@
                             , skin: 'msg'
                             , time: 1
                         });
-                        setTimeout(function(){window.location.reload()},500);
+                        setTimeout(function () {
+                            window.location.reload()
+                        }, 500);
                     }
                 }, fail: function (res) {
 
