--- a/mubei_admin/application/index/view/user/change_shop.html
+++ b/mubei_admin/application/index/view/user/change_shop.html
@@ -1,25 +1,27 @@
-
 <!DOCTYPE html>
 
-<!--[if IE 8]> <html lang="en" class="ie8"> <![endif]-->
+<!--[if IE 8]>
+<html lang="en" class="ie8"> <![endif]-->
 
-<!--[if IE 9]> <html lang="en" class="ie9"> <![endif]-->
+<!--[if IE 9]>
+<html lang="en" class="ie9"> <![endif]-->
 
-<!--[if !IE]><!--> <html lang="en"> <!--<![endif]-->
+<!--[if !IE]><!-->
+<html lang="en"> <!--<![endif]-->
 
 <!-- BEGIN HEAD -->
 
 <head>
 
-    <meta charset="utf-8" />
+    <meta charset="utf-8"/>
 
     <title>Metronic | Form Stuff - Form Components</title>
 
-    <meta content="width=device-width, initial-scale=1.0" name="viewport" />
+    <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
 
-    <meta content="" name="description" />
+    <meta content="" name="description"/>
 
-    <meta content="" name="author" />
+    <meta content="" name="author"/>
 
     <!-- BEGIN GLOBAL MANDATORY STYLES -->
 
@@ -44,37 +46,37 @@
 
     <!-- BEGIN PAGE LEVEL STYLES -->
 
-    <link rel="stylesheet" type="text/css" href="__static__/media/css/bootstrap-fileupload.css" />
+    <link rel="stylesheet" type="text/css" href="__static__/media/css/bootstrap-fileupload.css"/>
 
-    <link rel="stylesheet" type="text/css" href="__static__/media/css/jquery.gritter.css" />
+    <link rel="stylesheet" type="text/css" href="__static__/media/css/jquery.gritter.css"/>
 
-    <link rel="stylesheet" type="text/css" href="__static__/media/css/chosen.css" />
+    <link rel="stylesheet" type="text/css" href="__static__/media/css/chosen.css"/>
 
-    <link rel="stylesheet" type="text/css" href="__static__/media/css/select2_metro.css" />
+    <link rel="stylesheet" type="text/css" href="__static__/media/css/select2_metro.css"/>
 
-    <link rel="stylesheet" type="text/css" href="__static__/media/css/jquery.tagsinput.css" />
+    <link rel="stylesheet" type="text/css" href="__static__/media/css/jquery.tagsinput.css"/>
 
-    <link rel="stylesheet" type="text/css" href="__static__/media/css/clockface.css" />
+    <link rel="stylesheet" type="text/css" href="__static__/media/css/clockface.css"/>
 
-    <link rel="stylesheet" type="text/css" href="__static__/media/css/bootstrap-wysihtml5.css" />
+    <link rel="stylesheet" type="text/css" href="__static__/media/css/bootstrap-wysihtml5.css"/>
 
-    <link rel="stylesheet" type="text/css" href="__static__/media/css/datepicker.css" />
+    <link rel="stylesheet" type="text/css" href="__static__/media/css/datepicker.css"/>
 
-    <link rel="stylesheet" type="text/css" href="__static__/media/css/timepicker.css" />
+    <link rel="stylesheet" type="text/css" href="__static__/media/css/timepicker.css"/>
 
-    <link rel="stylesheet" type="text/css" href="__static__/media/css/colorpicker.css" />
+    <link rel="stylesheet" type="text/css" href="__static__/media/css/colorpicker.css"/>
 
-    <link rel="stylesheet" type="text/css" href="__static__/media/css/bootstrap-toggle-buttons.css" />
+    <link rel="stylesheet" type="text/css" href="__static__/media/css/bootstrap-toggle-buttons.css"/>
 
-    <link rel="stylesheet" type="text/css" href="__static__/media/css/daterangepicker.css" />
+    <link rel="stylesheet" type="text/css" href="__static__/media/css/daterangepicker.css"/>
 
-    <link rel="stylesheet" type="text/css" href="__static__/media/css/datetimepicker.css" />
+    <link rel="stylesheet" type="text/css" href="__static__/media/css/datetimepicker.css"/>
 
-    <link rel="stylesheet" type="text/css" href="__static__/media/css/multi-select-metro.css" />
+    <link rel="stylesheet" type="text/css" href="__static__/media/css/multi-select-metro.css"/>
 
     <link href="__static__/media/css/bootstrap-modal.css" rel="stylesheet" type="text/css"/>
 
-    <link rel="stylesheet" type="text/css" href="__static__/bianji/styles/simditor.css" />
+    <link rel="stylesheet" type="text/css" href="__static__/bianji/styles/simditor.css"/>
     <script src="http://www.jq22.com/jquery/jquery-1.10.2.js"></script>
     <script type="text/javascript" src="__static__/bianji/scripts/module.min.js"></script>
     <script type="text/javascript" src="__static__/bianji/scripts/hotkeys.min.js"></script>
@@ -83,7 +85,7 @@
 
     <!-- END PAGE LEVEL STYLES -->
 
-    <link rel="shortcut icon" href="__static__/media/image/favicon.ico" />
+    <link rel="shortcut icon" href="__static__/media/image/favicon.ico"/>
 
 </head>
 
@@ -96,7 +98,6 @@
 <!-- BEGIN HEADER -->
 
 
-
 <!-- END HEADER -->
 
 <!-- BEGIN CONTAINER -->
@@ -104,111 +105,110 @@
 <div class="page-container row-fluid">
 
 
+    <div class="portlet box blue">
+
+        <div class="portlet-title">
+            <div class="caption"><i class="icon-reorder"></i>修改资讯</div>
+        </div>
+
+        <div class="portlet-body form">
+
+            <!-- BEGIN FORM-->
+
+            <form action="#" class="form-horizontal">
 
 
-                <div class="portlet box blue">
+                <div class="control-group">
 
-                    <div class="portlet-title">
-                        <div class="caption"><i class="icon-reorder"></i>修改资讯</div>
-                    </div>
+                    <label class="control-label">资讯标题</label>
 
-                    <div class="portlet-body form">
+                    <div class="controls">
 
-                        <!-- BEGIN FORM-->
-
-                        <form action="#" class="form-horizontal">
-
-
-                            <div class="control-group">
-
-                                <label class="control-label">资讯标题</label>
-
-                                <div class="controls">
-
-                                    <input type="text" id="title" value="<?php echo $shop['sh_title']?>"  class="m-wrap span12">
-
-                                </div>
-
-                            </div>
-
-                            <div class="control-group">
-
-                                <label class="control-label">上传资讯图片</label>
-
-                                <div class="controls">
-
-                                    <div class="fileupload fileupload-new" data-provides="fileupload">
-
-                                        <div class="fileupload-new thumbnail" style="width: 200px; height: 150px;">
-
-                                            <img src="<?php echo  '/maibao/public/static/uploads/'.$shop['sh_img']?>" alt="">
-
-                                        </div>
-
-                                        <div class="fileupload-preview fileupload-exists thumbnail" style="max-width: 200px; max-height: 150px; line-height: 20px;"></div>
-
-                                        <div>
-
-                                            <span class="btn btn-file"><span class="fileupload-new">选择图片</span>
-
-													<span class="fileupload-exists">更换图片</span>
-
-													  <input type="file" class="default" accept="image/*"  id="image" name="image"  /> </span>
-
-
-                                            <a href="#" class="btn fileupload-exists" data-dismiss="fileupload">删除图片</a>
-
-                                        </div>
-
-                                    </div>
-
-                                </div>
-
-                            </div>
-
-                            <div class="control-group">
-
-
-                                <div class="row cl" style="width: 80%;margin: 0 auto;">
-                                    <label class="form-label col-xs-4 col-sm-3">资讯内容：</label>
-                                    <div class="formControls col-xs-8 col-sm-9">
-                                        <textarea id="editor" placeholder="" autofocus  class="textarea" >
-                                            <?php echo $shop['sh_text']?>
-                                        </textarea>
-                                        <!--<textarea name="content" id="content" cols="" rows="" class="textarea" placeholder=""></textarea>-->
-                                    </div>
-                                </div>
-                                <script>
-                                    var editor = new Simditor({
-                                        textarea: $('#editor')
-                                    });
-                                </script>
-
-                            </div>
-
-
-                            <input type="hidden" value="<?php echo $shop['sh_img']?>" id="img"/>
-                            <input type="hidden" value="<?php echo $shop['sh_id']?>" id="sh_id"/>
-
-
-                            <div class="form-actions">
-
-                                <button type="button" class="btn blue" onclick="send()"><i class="icon-ok"></i> 添加</button>
-
-
-                            </div>
-
-
-                        </form>
-
-                        <!-- END FORM-->
+                        <input type="text" id="title" value="<?php echo $shop['sh_title']?>" class="m-wrap span12">
 
                     </div>
 
                 </div>
 
-                <!-- END PORTLET-->
+                <div class="control-group">
 
+                    <label class="control-label">上传资讯图片</label>
+
+                    <div class="controls">
+
+                        <div class="fileupload fileupload-new" data-provides="fileupload">
+
+                            <div class="fileupload-new thumbnail" style="width: 200px; height: 150px;">
+
+                                <img src="<?php echo  '/maibao/public/static/uploads/'.$shop['sh_img']?>" alt="">
+
+                            </div>
+
+                            <div class="fileupload-preview fileupload-exists thumbnail"
+                                 style="max-width: 200px; max-height: 150px; line-height: 20px;"></div>
+
+                            <div>
+
+                                            <span class="btn btn-file"><span class="fileupload-new">选择图片</span>
+
+													<span class="fileupload-exists">更换图片</span>
+
+													  <input type="file" class="default" accept="image/*" id="image"
+                                                             name="image"/> </span>
+
+
+                                <a href="#" class="btn fileupload-exists" data-dismiss="fileupload">删除图片</a>
+
+                            </div>
+
+                        </div>
+
+                    </div>
+
+                </div>
+
+                <div class="control-group">
+
+
+                    <div class="row cl" style="width: 80%;margin: 0 auto;">
+                        <label class="form-label col-xs-4 col-sm-3">资讯内容：</label>
+                        <div class="formControls col-xs-8 col-sm-9">
+                                        <textarea id="editor" placeholder="" autofocus class="textarea">
+                                            <?php echo $shop['sh_text']?>
+                                        </textarea>
+                            <!--<textarea name="content" id="content" cols="" rows="" class="textarea" placeholder=""></textarea>-->
+                        </div>
+                    </div>
+                    <script>
+                        var editor = new Simditor({
+                            textarea: $('#editor')
+                        });
+                    </script>
+
+                </div>
+
+
+                <input type="hidden" value="<?php echo $shop['sh_img']?>" id="img"/>
+                <input type="hidden" value="<?php echo $shop['sh_id']?>" id="sh_id"/>
+
+
+                <div class="form-actions">
+
+                    <button type="button" class="btn blue" onclick="send()"><i class="icon-ok"></i> 添加</button>
+
+
+                </div>
+
+
+            </form>
+
+            <!-- END FORM-->
+
+        </div>
+
+    </div>
+
+    <!-- END PORTLET-->
 
 
 </div>
@@ -216,7 +216,6 @@
 <!-- END CONTAINER -->
 
 <!-- BEGIN FOOTER -->
-
 
 
 <!-- END FOOTER -->
@@ -249,7 +248,7 @@
 
 <script src="__static__/media/js/jquery.cookie.min.js" type="text/javascript"></script>
 
-<script src="__static__/media/js/jquery.uniform.min.js" type="text/javascript" ></script>
+<script src="__static__/media/js/jquery.uniform.min.js" type="text/javascript"></script>
 
 <!-- END CORE PLUGINS -->
 
@@ -291,9 +290,9 @@
 
 <script type="text/javascript" src="__static__/media/js/jquery.multi-select.js"></script>
 
-<script src="__static__/media/js/bootstrap-modal.js" type="text/javascript" ></script>
+<script src="__static__/media/js/bootstrap-modal.js" type="text/javascript"></script>
 
-<script src="__static__/media/js/bootstrap-modalmanager.js" type="text/javascript" ></script>
+<script src="__static__/media/js/bootstrap-modalmanager.js" type="text/javascript"></script>
 
 <!-- END PAGE__static__/ LEVEL PLUGINS -->
 
@@ -313,10 +312,9 @@
 <link rel="stylesheet" href="__static__/layer/mobile/need/layer.css">
 
 
-
 <script>
 
-    jQuery(document).ready(function() {
+    jQuery(document).ready(function () {
 
         // initiate layout and plugins
 
@@ -326,23 +324,23 @@
 
     });
 
-    function send(){
+    function send() {
         var fileInput = document.getElementById("image");
         var file = fileInput.files[0];
         var formData = new FormData();
-        formData.append("image",file);
-        formData.append("title",$('#title').val());
-        formData.append("editor",$('#editor').val());
-        formData.append("img",$('#img').val());
-        formData.append("shid",$('#sh_id').val());
+        formData.append("image", file);
+        formData.append("title", $('#title').val());
+        formData.append("editor", $('#editor').val());
+        formData.append("img", $('#img').val());
+        formData.append("shid", $('#sh_id').val());
         console.log(formData);
-        if(!$('#title').val()){
+        if (!$('#title').val()) {
             alert("请填写资讯标题");
-        }else if( !$('#editor').val()){
+        } else if (!$('#editor').val()) {
             alert("请填写资讯内容");
-        }else if(!formData){
+        } else if (!formData) {
             alert("请选择图片");
-        }else{
+        } else {
             $.ajax({
                 url: "{:url('index/user/change_shop_p2')}",
                 type: 'POST',
@@ -352,7 +350,7 @@
                 processData: false,//用于对data参数进行序列化处理 这里必须false
                 contentType: false, //必须
                 success: function (res) {
-                    if(res.code == 2) {
+                    if (res.code == 2) {
                         layer.open({
                             content: res.msg
                             , skin: 'msg'
@@ -364,7 +362,9 @@
                             , skin: 'msg'
                             , time: 1
                         });
-                        setTimeout(function(){window.location.reload()},500);
+                        setTimeout(function () {
+                            window.location.reload()
+                        }, 500);
                     }
                 }, fail: function (res) {
 
