--- a/mubei_admin/application/index/view/user/delete_user.html
+++ b/mubei_admin/application/index/view/user/delete_user.html
@@ -1,24 +1,27 @@
 <!DOCTYPE html>
 
-<!--[if IE 8]> <html lang="en" class="ie8 no-js"> <![endif]-->
+<!--[if IE 8]>
+<html lang="en" class="ie8 no-js"> <![endif]-->
 
-<!--[if IE 9]> <html lang="en" class="ie9 no-js"> <![endif]-->
+<!--[if IE 9]>
+<html lang="en" class="ie9 no-js"> <![endif]-->
 
-<!--[if !IE]><!--> <html lang="en" class="no-js"> <!--<![endif]-->
+<!--[if !IE]><!-->
+<html lang="en" class="no-js"> <!--<![endif]-->
 
 <!-- BEGIN HEAD -->
 
 <head>
 
-    <meta charset="utf-8" />
+    <meta charset="utf-8"/>
 
     <title>会员管理</title>
 
-    <meta content="width=device-width, initial-scale=1.0" name="viewport" />
+    <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
 
-    <meta content="" name="description" />
+    <meta content="" name="description"/>
 
-    <meta content="" name="author" />
+    <meta content="" name="author"/>
 
     <!-- BEGIN GLOBAL MANDATORY STYLES -->
 
@@ -44,7 +47,7 @@
 
     <link href="__static__/media/css/jquery.gritter.css" rel="stylesheet" type="text/css"/>
 
-    <link href="__static__/media/css/daterangepicker.css" rel="stylesheet" type="text/css" />
+    <link href="__static__/media/css/daterangepicker.css" rel="stylesheet" type="text/css"/>
 
     <link href="__static__/media/css/fullcalendar.css" rel="stylesheet" type="text/css"/>
 
@@ -54,7 +57,7 @@
 
     <!-- END PAGE LEVEL STYLES -->
 
-    <link rel="shortcut icon" href="__static__/media/image/favicon.ico" />
+    <link rel="shortcut icon" href="__static__/media/image/favicon.ico"/>
 
 </head>
 
@@ -62,7 +65,7 @@
 
 <!-- BEGIN BODY -->
 
-<body >
+<body>
 
 
 <div class="portlet box blue ">
@@ -84,7 +87,8 @@
 
                 <div class="controls">
 
-                    <input type="text" id="uid" value="<?php echo $user['u_id']?>" disabled="true" class="m-wrap span12">
+                    <input type="text" id="uid" value="<?php echo $user['u_id']?>" disabled="true"
+                           class="m-wrap span12">
 
                 </div>
 
@@ -129,9 +133,6 @@
             </div>
 
 
-
-
-
             <div class="form-actions">
 
                 <button type="button" class="btn blue" onclick="send()"><i class="icon-ok"></i> 删除</button>
@@ -156,7 +157,7 @@
 
 <script>
 
-    jQuery(document).ready(function() {
+    jQuery(document).ready(function () {
 
         App.init(); // initlayout and core plugins
 
@@ -179,40 +180,41 @@
     });
 
 
-
     function admin_add(title, url, w, h) {
         layer_show(title, url, w, h);
     }
 
 
-    function send(){
+    function send() {
 
-            $.ajax({
-                url: "{:url('index/user/delete_user_p2')}",
-                type: 'POST',
-                dataType: 'JSON',
-                data: {
-                    u_id: $('#uid').val()
-                },
-                success: function (res) {
-                    if(res.code == 2) {
-                        layer.open({
-                            content: res.msg
-                            , skin: 'msg'
-                            , time: 1
-                        });
-                    } else if (res.code == 1) {
-                        layer.open({
-                            content: res.msg
-                            , skin: 'msg'
-                            , time: 1
-                        });
-                        setTimeout(function(){window.location.reload()},500);
-                    }
-                }, fail: function (res) {
-
+        $.ajax({
+            url: "{:url('index/user/delete_user_p2')}",
+            type: 'POST',
+            dataType: 'JSON',
+            data: {
+                u_id: $('#uid').val()
+            },
+            success: function (res) {
+                if (res.code == 2) {
+                    layer.open({
+                        content: res.msg
+                        , skin: 'msg'
+                        , time: 1
+                    });
+                } else if (res.code == 1) {
+                    layer.open({
+                        content: res.msg
+                        , skin: 'msg'
+                        , time: 1
+                    });
+                    setTimeout(function () {
+                        window.location.reload()
+                    }, 500);
                 }
-            });
+            }, fail: function (res) {
+
+            }
+        });
 
     }
 </script>
