--- a/mubei_admin/application/index/view/user/noticemanage_t.html
+++ b/mubei_admin/application/index/view/user/noticemanage_t.html
@@ -1,24 +1,27 @@
 <!DOCTYPE html>
 
-<!--[if IE 8]> <html lang="en" class="ie8 no-js"> <![endif]-->
+<!--[if IE 8]>
+<html lang="en" class="ie8 no-js"> <![endif]-->
 
-<!--[if IE 9]> <html lang="en" class="ie9 no-js"> <![endif]-->
+<!--[if IE 9]>
+<html lang="en" class="ie9 no-js"> <![endif]-->
 
-<!--[if !IE]><!--> <html lang="en" class="no-js"> <!--<![endif]-->
+<!--[if !IE]><!-->
+<html lang="en" class="no-js"> <!--<![endif]-->
 
 <!-- BEGIN HEAD -->
 
 <head>
 
-    <meta charset="utf-8" />
+    <meta charset="utf-8"/>
 
     <title>会员管理</title>
 
-    <meta content="width=device-width, initial-scale=1.0" name="viewport" />
+    <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
 
-    <meta content="" name="description" />
+    <meta content="" name="description"/>
 
-    <meta content="" name="author" />
+    <meta content="" name="author"/>
 
     <!-- BEGIN GLOBAL MANDATORY STYLES -->
 
@@ -48,7 +51,7 @@
 
     <link href="__static__/media/css/jquery.gritter.css" rel="stylesheet" type="text/css"/>
 
-    <link href="__static__/media/css/daterangepicker.css" rel="stylesheet" type="text/css" />
+    <link href="__static__/media/css/daterangepicker.css" rel="stylesheet" type="text/css"/>
 
     <link href="__static__/media/css/fullcalendar.css" rel="stylesheet" type="text/css"/>
 
@@ -56,7 +59,7 @@
 
     <link href="__static__/media/css/jquery.easy-pie-chart.css" rel="stylesheet" type="text/css" media="screen"/>
 
-    <link rel="stylesheet" type="text/css" href="__static__/bianji/styles/simditor.css" />
+    <link rel="stylesheet" type="text/css" href="__static__/bianji/styles/simditor.css"/>
     <script src="http://www.jq22.com/jquery/jquery-1.10.2.js"></script>
     <script type="text/javascript" src="__static__/bianji/scripts/module.min.js"></script>
     <script type="text/javascript" src="__static__/bianji/scripts/hotkeys.min.js"></script>
@@ -69,7 +72,7 @@
 
 <!-- BEGIN BODY -->
 
-<body >
+<body>
 
 
 <div class="portlet box blue ">
@@ -91,7 +94,7 @@
 
                 <div class="controls">
 
-                    <input type="text" id="title" value="<?php echo $user['n_title']?>"  class="m-wrap span12">
+                    <input type="text" id="title" value="<?php echo $user['n_title']?>" class="m-wrap span12">
 
                 </div>
 
@@ -103,7 +106,8 @@
 
                 <div class="controls">
 
-                    <input type="text" value="<?php echo date('Y-m-d H:i:s', $user['time']) ?>"  disabled="true" class="m-wrap span12">
+                    <input type="text" value="<?php echo date('Y-m-d H:i:s', $user['time']) ?>" disabled="true"
+                           class="m-wrap span12">
 
                 </div>
 
@@ -114,7 +118,7 @@
                 <label class="control-label">公告详情</label>
 
                 <div class="controls">
-                    <textarea id="editor" placeholder="" autofocus  ><?php echo $user['n_text']?></textarea>
+                    <textarea id="editor" placeholder="" autofocus><?php echo $user['n_text']?></textarea>
                     <script>
                         var editor = new Simditor({
                             textarea: $('#editor')
@@ -126,15 +130,11 @@
             </div>
 
 
-
-
-
-
-
-
             <div class="form-actions">
 
-                <button type="button" class="btn blue" onclick="send(<?php echo $user['n_id']?>)"><i class="icon-ok"></i> 修改</button>
+                <button type="button" class="btn blue" onclick="send(<?php echo $user['n_id']?>)"><i
+                        class="icon-ok"></i> 修改
+                </button>
 
             </div>
 
@@ -155,7 +155,7 @@
 
 <script>
 
-    jQuery(document).ready(function() {
+    jQuery(document).ready(function () {
 
         App.init(); // initlayout and core plugins
 
@@ -178,26 +178,25 @@
     });
 
 
-
     function admin_add(title, url, w, h) {
         layer_show(title, url, w, h);
     }
 
 
-    function send(nid){
-        if(!$('#title').val()){
+    function send(nid) {
+        if (!$('#title').val()) {
             layer.open({
                 content: '请填写标题'
                 , skin: 'msg'
                 , time: 1
             });
-        }else if(!$('#editor').val()) {
+        } else if (!$('#editor').val()) {
             layer.open({
                 content: '请填写内容'
                 , skin: 'msg'
                 , time: 1
             });
-        }else{
+        } else {
             $.ajax({
                 url: "{:url('index/menu/noticemanage_t')}",
                 type: 'POST',
@@ -208,7 +207,7 @@
                     nid: nid
                 },
                 success: function (res) {
-                    if(res.code == 2) {
+                    if (res.code == 2) {
                         layer.open({
                             content: res.msg
                             , skin: 'msg'
@@ -220,7 +219,9 @@
                             , skin: 'msg'
                             , time: 1
                         });
-                        setTimeout(function(){window.location.reload()},500);
+                        setTimeout(function () {
+                            window.location.reload()
+                        }, 500);
                     }
                 }, fail: function (res) {
 
