--- a/mubei_admin/application/index/view/user/send_message.html
+++ b/mubei_admin/application/index/view/user/send_message.html
@@ -1,24 +1,27 @@
 <!DOCTYPE html>
 
-<!--[if IE 8]> <html lang="en" class="ie8 no-js"> <![endif]-->
+<!--[if IE 8]>
+<html lang="en" class="ie8 no-js"> <![endif]-->
 
-<!--[if IE 9]> <html lang="en" class="ie9 no-js"> <![endif]-->
+<!--[if IE 9]>
+<html lang="en" class="ie9 no-js"> <![endif]-->
 
-<!--[if !IE]><!--> <html lang="en" class="no-js"> <!--<![endif]-->
+<!--[if !IE]><!-->
+<html lang="en" class="no-js"> <!--<![endif]-->
 
 <!-- BEGIN HEAD -->
 
 <head>
 
-    <meta charset="utf-8" />
+    <meta charset="utf-8"/>
 
     <title>会员管理</title>
 
-    <meta content="width=device-width, initial-scale=1.0" name="viewport" />
+    <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
 
-    <meta content="" name="description" />
+    <meta content="" name="description"/>
 
-    <meta content="" name="author" />
+    <meta content="" name="author"/>
 
     <!-- BEGIN GLOBAL MANDATORY STYLES -->
 
@@ -44,7 +47,7 @@
 
     <link href="__static__/media/css/jquery.gritter.css" rel="stylesheet" type="text/css"/>
 
-    <link href="__static__/media/css/daterangepicker.css" rel="stylesheet" type="text/css" />
+    <link href="__static__/media/css/daterangepicker.css" rel="stylesheet" type="text/css"/>
 
     <link href="__static__/media/css/fullcalendar.css" rel="stylesheet" type="text/css"/>
 
@@ -54,7 +57,7 @@
 
     <!-- END PAGE LEVEL STYLES -->
 
-    <link rel="shortcut icon" href="__static__/media/image/favicon.ico" />
+    <link rel="shortcut icon" href="__static__/media/image/favicon.ico"/>
 
 </head>
 
@@ -62,7 +65,7 @@
 
 <!-- BEGIN BODY -->
 
-<body >
+<body>
 
 
 <div class="portlet box blue ">
@@ -84,7 +87,8 @@
 
                 <div class="controls">
 
-                    <input type="text" id="uid" value="<?php echo $user['u_id']?>" disabled="true" class="m-wrap span12">
+                    <input type="text" id="uid" value="<?php echo $user['u_id']?>" disabled="true"
+                           class="m-wrap span12">
 
                 </div>
 
@@ -97,12 +101,11 @@
 
                 <div class="controls">
 
-                    <input type="text" id="title" value=""  class="m-wrap span12">
+                    <input type="text" id="title" value="" class="m-wrap span12">
 
                 </div>
 
             </div>
-
 
 
             <div class="control-group">
@@ -111,22 +114,19 @@
 
                 <div class="controls">
                     <!--<input type="text"  class="m-wrap span12">-->
-                    <textarea name="content"  id="conten" style="width: 90%;height: 100px;" id="content" cols="" rows="" class="textarea" placeholder=""></textarea>
+                    <textarea name="content" id="conten" style="width: 90%;height: 100px;" id="content" cols="" rows=""
+                              class="textarea" placeholder=""></textarea>
 
                 </div>
 
             </div>
 
 
-
-
-
-
-
-
             <div class="form-actions">
 
-                <button type="button" class="btn blue" onclick="send(<?php echo $user['u_id']?>)"><i class="icon-ok"></i>发送</button>
+                <button type="button" class="btn blue" onclick="send(<?php echo $user['u_id']?>)"><i
+                        class="icon-ok"></i>发送
+                </button>
 
             </div>
 
@@ -147,7 +147,7 @@
 
 <script>
 
-    jQuery(document).ready(function() {
+    jQuery(document).ready(function () {
 
         App.init(); // initlayout and core plugins
 
@@ -170,26 +170,25 @@
     });
 
 
-
     function admin_add(title, url, w, h) {
         layer_show(title, url, w, h);
     }
 
 
-    function send(nid){
-        if(!$('#title').val()){
+    function send(nid) {
+        if (!$('#title').val()) {
             layer.open({
                 content: '请填写标题'
                 , skin: 'msg'
                 , time: 1
             });
-        }else if(!$('#conten').val()) {
+        } else if (!$('#conten').val()) {
             layer.open({
                 content: '请填写内容'
                 , skin: 'msg'
                 , time: 1
             });
-        }else{
+        } else {
             $.ajax({
                 url: "{:url('index/user/send_message_t')}",
                 type: 'POST',
@@ -200,7 +199,7 @@
                     uid: nid
                 },
                 success: function (res) {
-                    if(res.code == 2) {
+                    if (res.code == 2) {
                         layer.open({
                             content: res.msg
                             , skin: 'msg'
@@ -212,7 +211,9 @@
                             , skin: 'msg'
                             , time: 1
                         });
-                        setTimeout(function(){window.location.reload()},500);
+                        setTimeout(function () {
+                            window.location.reload()
+                        }, 500);
                     }
                 }, fail: function (res) {
 
