注册,推荐奖励,后台设置推荐奖励百分比

--- a/mubei_admin/application/index/view/menu/config.html
+++ b/mubei_admin/application/index/view/menu/config.html
@@ -421,6 +421,22 @@
 
                         </div>
 
+                        <div class="control-group">
+
+                            <label class="control-label"><?php echo $config11['co_name']?></label>
+
+                            <div class="controls">
+
+                                <input type="number" id="target<?php echo $config11['co_id']?>"
+                                       onchange="check(<?php echo $config11['co_id']?>)" placeholder="medium"
+                                       value="<?php echo $config11['co_config']?>" class="m-wrap medium">
+
+                                <span class="help-inline">单位:百分比（推荐加速）</span>
+
+                            </div>
+
+                        </div>
+
 
                         <div class="form-actions">
 
