--- a/mubei_admin/application/index/view/menu/user_score_order.html
+++ b/mubei_admin/application/index/view/menu/user_score_order.html
@@ -307,14 +307,26 @@
                             <?php foreach($order as $v ){ ?>
                             <tr style="text-align: center">
                                 <td data-title="用户uid"><?php echo $v['u_id']?></td>
-                                <!--<td data-title="Company">AUSTRALIAN AGRICULTURAL COMPANY LIMITED.</td>-->
+                                <td data-title="Company">AUSTRALIAN AGRICULTURAL COMPANY LIMITED.</td>
+                                <!--<td data-title="业务类型">-->
+                                    <!--<?php if($v['type'] == 1){ ?>-->
+                                    <!--<?php echo '兑换固定资产';?>-->
+                                    <!--<?php }else if($v['type'] == 2){ echo '资产兑换流通';}-->
+                                           <!--else if($v['type'] == 3){ echo '转入';}-->
+                                           <!--else if($v['type'] == 4){ echo '转出';}-->
+                                           <!--else if($v['type'] == 5){ echo '转出';}-->
+                                           <!--else if($v['type'] == 10){ echo 'vip积分奖励';}-->
+                                    <!--?>-->
+                                <!--</td>-->
                                 <td data-title="业务类型">
                                     <?php if($v['type'] == 1){ ?>
-                                    <?php echo '兑换固定资产';?>
-                                    <?php }else if($v['type'] == 2){ echo '资产兑换流通';}
-                    else if($v['type'] == 3){ echo '转入';}
-                    else if($v['type'] == 4){ echo '转出';}else if($v['type'] == 5){ echo '转出';}  else if($v['type'] == 10){ echo 'vip积分奖励';}
-                     ?>
+                                    <?php echo '每日释放';?>
+                                    <?php }else if($v['type'] == 2){ echo '加速释放';}
+                                           else if($v['type'] == 3){ echo '兑换积分';}
+                                           else if($v['type'] == 4){ echo '转入';}
+                                           else if($v['type'] == 5){ echo '转出';}
+                                           else if($v['type'] == 8){ echo 'vip积分奖励';}
+                                           else if($v['type'] == 10){ echo 'vip积分奖励';}
                                 </td>
                                 <td data-title="数额" class="numeric"><?php echo $v['co_money']?></td>
                                 <td data-title="时间" class="numeric"><?php echo date('Y-m-d H:i:s', $v['co_time']) ?></td>
